Many edits to component manual, mostly typos and stylistic changes
git-svn-id: https://svn.mccode.org/svn/McStasTeX@85 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/Component_manual.tex
+++ b/trunk/Component_manual.tex
@@ -44,7 +44,7 @@
 
 \newcommand{\MCS}{{McStas}}
 \newcommand{\version}{{1.9}}
-\newcommand{\reldate}{{October 1st, 2005}}
+\newcommand{\reldate}{{October 15, 2005}}
 \newcommand{\Ombold}{\mbox{\boldmath $\Omega$}}
 
 % enable index generation
@@ -52,7 +52,7 @@
 
 %\title{Component manual\\ to the neutron ray-tracing package
 % \MCS ,\\ version \version}
-%\author{Kim Lefmann and Peter Kj\ae r Willendrup \\
+%\author{Kim Lefmann, Peter Kj\ae r Willendrup, and Kristian Nielsen, \\
 % Materials Research Department, \\
 % Ris\o\ National Laboratory, 4000 Roskilde, Denmark;\\
 % Emmanuel Farhi and Klaus Lieutenant \\ ILL, Grenoble, France}
@@ -66,6 +66,12 @@
 
 %\maketitle
 \input{risoe-rep_comp-title}
+%\begin{center}
+%  \includegraphics[width=4.5in]{figures/sqw.eps}
+%\end{center}
+%
+% NOTE: Find a way to include this nice graphics on front page
+% Currently this does not work?!?
 
 \thispagestyle{empty}
 \include{abstractpage_comp}
@@ -77,8 +83,8 @@
 %\listoftables
 
 \include{preface_comp}
-\include{intro_comp}
-\include{techniq}
+%\include{intro_comp}
+%\include{techniq}
 \include{comp}
 \include{sources}
 \include{optics}
