--- a/trunk/abstractpage_comp.tex
+++ b/trunk/abstractpage_comp.tex
@@ -20,12 +20,15 @@ Peter Kj\ae r Willendrup \\
 Materials Research Department, Ris{\o} National Laboratory, Roskilde, Denmark \\
 email: \verb+peter.willendrup@risoe.dk+
 \vskip\baselineskip\noindent
+Kristian Nielsen \\
+email: \verb+kristian.nielsen@mail.tele.dk+
+\vskip\baselineskip\noindent
 Emmanuel Farhi \\
 Institut Laue-Langevin, Grenoble, France \\
 email: \verb+farhi@ill.fr+ \\
 \vskip\baselineskip\noindent
 Klaus Lieutenant \\
-Institut Laue-Langevin, Grenoble, France 
+Institut Laue-Langevin, Grenoble, France \\
 email: \verb+lieutenant@ill.fr+
 \end{quote}
 %Front page illustration:\\[\baselineskip]
