--- a/trunk/comp.tex
+++ b/trunk/comp.tex
@@ -2,6 +2,18 @@
 
 \chapter{About the component library}
 \label{c:components}
+This \MCS\ Component Manual consists of the following major parts:
+\begin{itemize}
+\item A thorough description of system components, 
+with one chapter per major category: Sources, optics (two chapters), 
+monochromators, samples, monitors, and other components. 
+\item The \MCS\ library functions and definitions
+  that aid in the writing of simulations and components in
+  Appendix~\ref{c:kernelcalls}.    
+\item An explanation of the \MCS\ terminology in Appendix~\ref{s:terminology}.
+\end{itemize}
+Additionally, you may refer to the list of example instruments 
+from the library in the \MCS\ User Manual.
 
 \section{Authorship}
 The component library is
@@ -10,35 +22,60 @@ maintained by the \MCS\ system group. A number of basic components
 team.
 
 Other components are contributed
-by specific authors, who are listed at each component
-they contribute.
+by specific authors, who are listed in the code for each component
+they contribute as well as in this manual.
 \MCS\ users are encouraged to send their
 contributions to us for inclusion in future releases.
 
-subsubsection{Coordinate system and symbols}
+Some contributed components have later been taken over by the \MCS\ system
+group, with permission from the original authors. 
+The original author will still appear both in the component code and in the
+\MCS\ manual.
+
+\subsection{Symbols for neutron scattering and simulation}
 In the description of the theory behind the component functionality
 we will use the usual symbols {\bf r} for the position
 $(x,y,z)$ of the particle (unit m), and {\bf v} for
 the particle velocity $(v_x, v_y, v_z)$ (unit m/s).
-Another frequently used symbol is
-the wave vector ${\bf k} = m_{\rm N} {\bf v}/\hbar$ , where
-$m_{\rm N}$ is the neutron mass. {\bf k} is usually given in
+Anoother essential quantity is the neutron wave vector 
+${\bf k} = m_{\rm n} {\bf v}/\hbar$ , where
+$m_{\rm n}$ is the neutron mass. {\bf k} is usually given in
 \AA$^{-1}$, while neutron energies are given in meV.
+The neutron wavelength is the reciprocal wave vector,
+$\lambda=2 \pi / k$.
 In general, vectors are denoted by boldface symbols.
+
 Subscripts "i" and "f" denotes ``initial'' and ``final'', respectively,
 and are used in connection with the neutron state before and after
 an interaction with the component in question.
+This is of particular importance in sample components, where the
+wave vector change is denoted the {\em scattering vector}
+\begin{equation}
+{\bf q} \equiv {\bf k}_{\rm i} - {\bf k}_{\rm f} .
+\end{equation}
+In analogy, the {\em energy transfer} is given by
+\begin{equation}
+\hbar \omega \equiv E_{\rm i}-E_{\rm f} = 
+\frac{\hbar^2}{2 m_{\rm n}} \left( k_{\rm i}^2 - k_{\rm f}^2 \right).
+\end{equation}
 
 \section{Component coordinate system}
 All mentioning of component geometry refer to
 the local coordinate system of the individual component.
 The axis convention is so that the $z$ axis is along
 the neutron propagation axis, the $y$ axis is vertical up,
-and the $x$ completes the right-handed coordinate system.
-Most components 'position' (as specified in the instrument description with the \verb+AT+ keyword) corresponds to the input side of it. Some components are centered (e.g. radial components).
+and the $x$ axis points left when looking along the $z$-axis, 
+completing a right-handed coordinate system.
+Most components 'position' (as specified in the instrument description 
+with the \verb+AT+ keyword) corresponds to their input side. 
+Some components are centered (e.g. radial components).
 \index{Symbols}\index{Coordinates system}
 
-Components are usually not designed to overlap. Warnings will be issued during simulation when no neutron can reach portions of the instrument, or neutrons are removed for computational reasons. This is usually the sign of either overlapping components or a very low intensity.\index{Removed neutron events}
+Components are usually not designed to overlap. 
+Warnings will be issued during simulation if sections of the instrument
+is not reached by any neutron rays, or if neutrons are removed.
+This is usually the sign of either overlapping components 
+or a very low intensity.\index{Removed neutron events}
 
 \section{Component source code}
 Source code for all components may be found in the \verb+lib/mcstas/+
@@ -47,6 +84,11 @@ the default is \verb+/usr/local/lib/mcstas/+
 on Unix-like systems and \verb+C:\mcstas\lib+ on Windows systems, but it can be
 changed using the \verb+MCSTAS+ environment variable.
 \index{Environment variable!MCSTAS}
+
+For temporary modification of a component, it is advised to make a copy
+of the component file into the working directory.
+A component file in the local directory will in \MCS\ take precedence over 
+a library component of the same name.   
 
 \section{Documentation}
 As a complement to this Component Manual, we encourage users to use
@@ -67,19 +109,23 @@ the {\it file.comp} component, using your
 BROWSER\index{Environment variable!BROWSER} setting, or as text if unset.
 The \verb+--help+ option will display the command help, as usual.
 
-An overview of the component library is also given in chapter \ref{s:components} and at the \MCS\ home page \cite{mcstas_webpage}.
+An overview of the component library is also given 
+in chapter \ref{s:components} and at the \MCS\ home page \cite{mcstas_webpage}.
 
 \subsubsection{About data files}\index{Data files}\index{Library!read\_table-lib (Read\_Table)}
-Source code for all components may be found in the \verb+lib/mcstas/+
-subdirectory of the McStas installation;
-the default is \verb+/usr/local/lib/mcstas/+
-on Unix-like systems and \verb+C:\mcstas\lib+ on Windows systems, but it can be
-changed using the \verb+MCSTAS+ environment variable.
-\index{Environment variable!MCSTAS}
+Some components require external data files, 
+e.g. lattice crystallographic definitions for Laue and powder pattern diffraction,
+$S(q,\omega)$ tables for inelastic scattering, 
+neutron events files for virtual sources, 
+transmission and reflectivity files, etc.
 
-Some components require external data files, e.g. lattice crystallographic definitions for Laue and powder pattern diffraction, $S(q,\omega)$ tables for inelastic scattering, neutron events files for virtual sources, transmission and reflectivity files, etc.
-
-Such files distributed with \MCS\ are located in the \verb+data+ sub-directory of the \verb+MCSTAS+ library. Components that make use of the \MCS\ file system, including the \verb+read-table+ library (see section \ref{s:read-table} may access all \MCS\ data files without making local copies. Of course, you are welcome to define your own data files, and eventually contribute to \MCS\ if you find then valuable.
+Such files distributed with \MCS\ are located in the 
+\verb+data+ sub-directory of the \verb+MCSTAS+ library. 
+Components that make use of the \MCS\ file system, 
+including the \verb+read-table+ library (see section \ref{s:read-table}) 
+may access all \MCS\ data files without making local copies. 
+Of course, you are welcome to define your own data files, 
+and eventually contribute to \MCS\ if you find them useful.
 
 
 \section{Component validation}
