--- a/trunk/e_monitor.tex
+++ b/trunk/e_monitor.tex
@@ -1,6 +1,6 @@
 % Emacs settings: -*-mode: latex; TeX-master: "manual.tex"; -*-
 
-\section{E\_monitor: The energy-sensitive monitor}
+\section{E\_monitor: The energy-sensitive monitor} \label{s:e-monitor}
 \index{Monitors!Energy monitor}
 \component{E\_monitor}{System}{$x_{\rm min}$, $x_{\rm max}$, $y_{\rm min}$, $y_{\rm max}$, $n_{\rm chan}$, $E_{\rm min}$, $E_{\rm max}$, filename}{}{}
 
@@ -10,6 +10,6 @@ the neutron energy, which in binned in \textit{nchan} bins between
 $E_{\rm min}$ and $E_{\rm max}$.
 
 The output parameters from {\bf E\_monitor} are the total counts,
-and a file with 1-dimensional data: counts vs. $E$ as for {\bf TOF\_monitor}.
+and a file with 1-dimensional data vs. $E$, similar to {\bf TOF\_monitor}.
 
 
