--- a/trunk/l_monitor.tex
+++ b/trunk/l_monitor.tex
@@ -10,7 +10,7 @@
 
 The component {\bf L\_monitor} is very similar to
 {\bf TOF\_monitor} and {\bf E\_monitor}.
-Only is this component sensitive to the neutron wavelength.
+This component is just sensitive to the neutron wavelength.
 The wavelength spectrum is output in a one-dimensional histogram.
 between $\lambda_{\rm min}$ and $\lambda_{\rm max}$ (measured in \AA ).
 
