--- a/trunk/mcstas.bib
+++ b/trunk/mcstas.bib
@@ -121,7 +121,7 @@
    publisher = {Clarendon Press, Oxford}
 }
 @article{Leibnitz63,
-   author    = {H. Maeir-Leibnitz and T. Springer},
+   author    = {H. Maier-Leibnitz and T. Springer},
    journal   = {Reactor Sci. Technol.},
    pages     = {217},
    year      = {1963},
