--- a/trunk/monitors.tex
+++ b/trunk/monitors.tex
@@ -9,20 +9,20 @@ possible, counting all neutrons (absorbing them in the process),
 while the monitors measure the intensity of the incoming beam, and must
 as such be almost transparent, interacting only with (roughly) 0.1-1\%
 of the neutrons passing by. In computer simulations, it is
-of course possible to detect every neutron without
+of course possible to detect every neutron ray without
 absorbing it or disturbing any of its parameters. Hence, the two components
 have very similar functions in the simulations, and we do
 not distinguish between them. For simplicity, they are from here on
-just called monitors, since they do not absorb neutrons.
+just called {\bf monitors}.
 
 Another important difference between computer simulations
 and real experiments is
 that one may allow the monitor to be sensitive to any neutron property,
 as {\em e.g.} direction, energy, and divergence, in addition to what
-is found in advanced existing monitors (space and time). One may, in
+is found in real-world detectors (space and time). One may, in
 fact, let the monitor have several of these properties at the same time,
 as seen for example in the energy sensitive monitor in
-section~\ref{s:e_monitor}.
+section~\ref{s:e-monitor}.
 
 When a monitor detects a neutron ray,
 a number counting variable is incremented: $n_i = n_{i-1}+1$
@@ -33,8 +33,7 @@ and the second moment of the weight is
 updated: $M_{2,i} = M_{2,i-1} + p_i^2$.
 As also discussed in the System Manual, after a simulation of $N$ rays
 the detected intensity (in units of neutrons/sec.) is $I_N$,
-while the estimated errorbar is $\sqrt{M_{2,i}^2}$.
-
+while the estimated errorbar is $\sqrt{M_{2,N}^2}$.
 
 Many different monitor components have been developed for
 \MCS , but we have selected to support only the most important ones.
@@ -44,11 +43,12 @@ that measures just one number (with errorbars) per simulation.
 This effect is mirrored by any of the 1- or 2-dimensional detectors
 we support, e.g. the {\rm PSD\_monitor}.
 In case additional functionality of monitors is required,
-the existing monitors can easily be modified.
+the few code lines of existing monitors can easily be modified.
 
 However, the ultimate solution is the use of the
 ``Swiss army knife'' of monitors, {\rm Monitor\_nD}, that can face
-almost any simulation challenge.
+almost any simulation requirement, 
+but will prove challenging for users who like to perform own modifications.
 
 \newpage
 \input{tof_monitor}
@@ -70,6 +70,3 @@ almost any simulation challenge.
 
 \newpage
 \input{Monitor_nD}
-
-%\newpage
-%\input{monitor_nd}
