--- a/trunk/optics.tex
+++ b/trunk/optics.tex
@@ -1,7 +1,7 @@
 % Emacs settings: -*-mode: latex; TeX-master: "manual.tex"; -*-
 
 \chapter{Beam optical components:
-Arms, slits, collimators}
+Arms, slits, collimators, and filters}
 This chapter contains a number of optical components
 that is used to modify the neutron beam in various ways,
 as well as the ``generic'' component {\bf Arm}.
