--- a/trunk/risoe-rep_comp-title.tex
+++ b/trunk/risoe-rep_comp-title.tex
@@ -35,11 +35,12 @@
  \space\number\year }
 
 \let\reportlan=\relax
-\def\month{5}                   % Released in May 2005
+\def\month{10}                   % Released in October 2005
 % Need to match front page line breaking.
 \title{Component~Manual~for~\rlap{the}\\ % Avoid overfull message.
  Neutron~Ray-Tracing~Package\\
  \MCS,\\ Version \version\ }
-\author{Kim Lefmann, Peter Kj\ae r Willendrup, Emmanuel Farhi, and Klaus Lieutenant}
+\author{Kim Lefmann, Peter Kj\ae r Willendrup, Kristian Nielsen,
+Emmanuel Farhi, and Klaus Lieutenant}
 \maketitle
 \endgroup
