--- a/trunk/source_gen.tex
+++ b/trunk/source_gen.tex
@@ -11,7 +11,8 @@ The shape may be rectangular (dimension $h$ and $w$), or a disk of radius $r$.
 The wavelength/energy range to emit is specified either using center and half width, or using minimum and maximum boundaries, alternatively for energy and wavelength.
 The flux spectrum is specified with the same Maxwellian parameters as in component Source\_Maxwell\_3 (refer to section \ref{source-maxwell}).
 
-Maxwellian parameters for some sources are given in Table~\ref{t:source-params}. 
+Maxwellian parameters for some continuous sources 
+are given in Table~\ref{t:source-params}. 
 
 \begin{table}
   \begin{center}
@@ -30,7 +31,8 @@ Maxwellian parameters for some sources are given in Table~\ref{t:source-params}.
              Source\_gen and Source\_Maxwell\_3.
              For some cases, a correction factor to the intensity 
              should be used to reach measured data; for the PSI cold source,
-             this correction factor is the beam current, $I_{\rm target}$.
+             this correction factor is the beam current, $I_{\rm target}$,
+             which is currently of the order 1.2~mA.
 }
     \label{t:source-params}
   }
