--- a/trunk/terms.tex
+++ b/trunk/terms.tex
@@ -7,7 +7,7 @@ This is a short explanation of phrases and terms which have a specific
 meaning within \MCS. We have tried to keep the list as short
 as possible with the risk that the reader may occasionally miss
 an explanation. In this case, you are more than welcome to contact
-the authors.
+the \MCS\ core team.
 
 \noindent
 \begin{itemize}
@@ -25,7 +25,7 @@ simulation run-time.
 \item{\bf Instrument} An assembly of \MCS\ components defining
       a neutron spectrometer.
 \item{\bf \MCS} Monte Carlo Simulation of Triple Axis Spectrometers
-       (the name of this project).
+       (the name of this package).
 \item{\bf Output parameter} An output parameter for a component.
   For example the counts in a monitor. An output parameter may be
   accessed from the instrument in which the component is used using
