--- a/trunk/v_selector.tex
+++ b/trunk/v_selector.tex
@@ -13,31 +13,43 @@
 \end{figure}
 
 The component {\bf V\_selector} models a rotating velocity
-selector constructed from a number of collimator blades
-arranged radially on an axis. Two identical slits
+selector constructed from $N$ collimator blades
+arranged radially on an axis. Two identical slits ($height \times width$)
 at a 12 o'clock position allow
 neutron passage at the position of the blades.
 The blades are "twisted" on the axis so that a stationary
-velocity selector does not transmit any neutrons; the total
-twist angle is denoted $\phi$.
+velocity selector does not transmit neutrons; the total
+twist angle is denoted $\phi$ (in degrees).
+
+Further input parameters for {\bf V\_selector} 
+the distance between apertures, $L_0$, the length of the
+collimator blades, $L_1$, the height from rotation axix to the slit
+centre, $r_0$, the rotation speed $\omega$ (in rpm), 
+and the blade thickness $t$.
+
+The local coordinate system is centered at the slit centre.
+
+The component {\rm Selector} produces equivalent results.
+
+\subsection{Velocity selector transmission}
 By rotating the selector you allow
-transmittance of neutrons around certain velocities, given by
+transmittance of neutrons rays with velocities around a mean value, given by
 \begin{equation}
 V_0 = \omega L / \phi ,
 \end{equation}
 which means that the selector has turned the twist angle
-$\phi$ during the neutron flight time $L/V_0$.
+$\phi$ during the typical neutron flight time $L/V_0$.
 
-Neutrons having a velocity slightly smaller or larger than $V_0$
+Neutrons having a velocity slightly different from $V_0$
 will either be transmitted or absorbed depending on the exact position
 of the rotator blades when the neutron enters the selector.
-Assuming this position to be unknown (and assuming infinitely
-thin blades), we arrive at
+Assuming this position to be unknown and integrating over all possible
+positions (assuming zero thickness of blades), we arrive at a transmission factor
 \begin{equation}
 T = \left\{
  \begin{array}{ll}
  1 - (N/2\pi ) |\phi-\omega L / V| &
-        {\rm if}\,  -1 < (N/2\pi )(\phi -\omega L / V) < 1 \\
+        {\rm if}\;   (N/2\pi )|\phi -\omega L / V| < 1 \\
     0  &  {\rm otherwise}
  \end{array} \right.
 \end{equation}
@@ -54,21 +66,11 @@ this formula, but it may contribute to $\psi$.
 neutron path in case of both vertical and horisontal divergence).
 
 Adding the effect of a finite blade thickness, $t$, reduces the transmission
-by the overall amount
+by the overall factor
 \begin{equation}
-dT = (N t) / (2\pi r ) ,
+\left( 1-\frac{N t}{2\pi r}  \right),
 \end{equation}
 where $r$ is the distance from the rotation axis. We ignore the variation
 of $r$ along the neutron path and use just the average value.
 
-The input parameters for V\_selector are the slit dimensions,
-\textit{width}, \textit{height} (in m),
-the distance between apertures, $L_0$ (in m), the length of the
-collimator blades, $L_1$ (in m), the height from rotation axix to the slit
-centre, $r_0$ (in m), the rotation speed $\omega$ (in rpm)
-the twist angle $\phi$ (in degrees), the blade thickness $t$ (in m),
-and the number of blades, $N$.
-
-The local coordinate system is centered at the slit centre.
-The component Selector produces equivalent results.
 
