--- a/trunk/Monitor_Optimizer.tex
+++ b/trunk/Monitor_Optimizer.tex
@@ -4,7 +4,7 @@
   Source\_Optimizer}
 \label{monitor-optimizer}
 \index{Sources!Optimization location|see{Sources/Optimizer}}\index{Optimization}
-\component{Source\_Optimizer}{E. Farhi}{optim\_comp}{$x_{min}$, $x_{max}$, $y_{min}$,$y_{max}$}{not fully validated}
+\component{Source\_Optimizer}{E. Farhi, ILL}{optim\_comp}{$x_{min}$, $x_{max}$, $y_{min}$,$y_{max}$}{not fully validated}
 
 The {\bf Monitor\_Optimizer} component works with the {\bf
   Source\_Optimizer} component. See section~\ref{source-optimizer}
@@ -12,7 +12,6 @@ for usage.
 
 The input parameters for {\bf Monitor\_Optimizer} are the rectangular
 shaped opening coordinates $x_{min}$, $x_{max}$, $y_{min}$,
-$y_{max}$ (in meters), and the name of the associated instance of
-the {\bf
-  Source\_Optimizer} component used in the instrument description file (one word,
+$y_{max}$, and the name of the associated instance of
+{\bf Source\_Optimizer} used in the instrument description file (one word,
 without quotes).
