--- a/trunk/Source_adapt.tex
+++ b/trunk/Source_adapt.tex
@@ -1,10 +1,10 @@
-% Emacs settings: -*-mode: latex; TeX-master: "manual.tex"; -*-
-
 \section{Source\_adapt: A neutron source with adaptive importance sampling}
 \label{s:Source_adapt}
 \label{s:source-adapt}
 \index{Optimization}
 \index{Sources!Adaptative source}
+
+\component{Source\_adapt}{K. Nielsen}{$x_{min}$, $x_{max}$, $y_{min}$, $y_{max}$, $E0$, $dE$, dist, $xw$, $yh$, $Phi$}{$\alpha$, $\beta$ (plenty, default values are ok)}{not fully validated}
 
 The {\bf Source\_adapt} component is a neutron source that uses adaptive
 importance sampling to improve the efficiency of the simulations. It
@@ -14,29 +14,58 @@ contribute much to the accuracy of the overall result are preferred over
 samples that contribute little. The method can achieve improvements of a
 factor of ten or sometimes several hundred in simulations where only a
 small part of the initial phase space contains useful neutrons.
-On the other side, a warning is in place here regarding potential wrong results using optimization techniques (see section \ref{s:optim} of the \MCS\ user manual). It is highly recommanded in any case to benchmark 'optimized' simulations against non-optimized ones, checking that obtained results are the same, but hopefully with a much improved statistics.
 
 The physical characteristics of the source are similar to those of
-Source\_flat (see section~\ref{sourceaim}). The source is a thin
-rectangle in the $X$-$Y$ plane with a flat energy spectrum in a
+{\bf Source\_simple} (see section~\ref{sourceaim}). The source is a thin
+rectangle in the $x$-$y$ plane with a flat energy spectrum in a
 user-specified range. The flux per area per steradian per
-{\AA}ngstr{\o}m per second is specified by the user; the total weight of
-neutrons emitted from the source will then be the same irrespectively of
-the number of neutron histories simulated, corresponding to one second
-of measurements.
+{\AA}ngstr{\o}m per second is specified by the user.
 
-The initial neutron weight is given by (see
-section~\ref{Source_flux_lambda} for details)
-$$ p_0 = \frac{N_{\rm total}}{N_{\rm sim}} =
-    \frac{\Phi}{N_{\rm sim}} A \Omega \Delta\lambda $$
-Here $\Delta\lambda$ is the total wavelength range of the source; since
-the spectrum is flat in energy (but not in wavelength), the flux
-will actually be different for different energies. A later version of
+The initial neutron weight is given by 
+(see section~\ref{s:neutron-flux} for details)
+\begin{equation} 
+    p_0 = \frac{N_{\rm total}}{N_{\rm sim}} =
+    \frac{\Phi}{N_{\rm sim}} A \Omega \Delta\lambda . 
+\end{equation}
+Here $\Delta\lambda$ is the total wavelength range of the source.
+A later version of
 this component will probably adapt (in a backward-compatible way) a more
 sensible way to specify the flux. For now, an energy or wavelength
-monitor (see sections~\ref{s:e_monitor} and~\ref{s:L_monitor}) placed
+monitor (see sections~\ref{s:E_monitor} and~\ref{s:L_monitor}) placed
 just after the source will show the actual energy-dependent flux.
 
+The input parameters for Source\_adapt are
+\textit{xmin}, \textit{xmax}, \textit{ymin}, and
+\textit{ymax} in meters to set the source dimensions;
+\textit{dist}, \textit{xw}, and \textit{yh}
+to set the focusing as for Source\_flat (section~\ref{source-simple}); 
+\textit{E0} and \textit{dE} to set the range of energies emitted, in meV (the range
+will be from $\textit{E0} - \textit{dE}$ to
+$\textit{E0} + \textit{dE}$); 
+flux to set the source flux $\Phi$ in ${\rm
+  cm}^{-2} {\rm st}^{-1} \textit{\AA} {\rm s}^{-1}$;
+$N_{\rm eng}$, $N_{\rm pos}$, and $N_{\rm
+  div}$ to set the number of bins in each dimensions; \textit{alpha} and
+\textit{beta} to set the parameters $\alpha$ and $\beta$ as described
+above; and \textit{filename} to give the name of a file in which to
+output the final sampling destribution, see below.
+
+A good general-purpose value for $\alpha$ and $\beta$ is $\alpha = \beta
+= 0.25$. The number of bins to choose will depend on the
+application. More bins will allow better adaption of the sampling, but
+will require more neutron histories to be simulated before a good
+adaption is obtained. The output of the sampling distribution is only
+meant for debugging, and the units on the axis are not necessarily
+meaningful. Setting the filename to \verb+NULL+ disables the output of
+the sampling distribution.
+
+\subsection{Optimization disclaimer}
+
+A warning is in place here regarding potentially wrong results 
+using optimization techniques.  
+It is highly recommanded in any case to benchmark 'optimized' simulations 
+against non-optimized ones, checking that obtained results are the same, 
+but hopefully with a much improved statistics.
 
 \subsection{The adaption algorithm}
 
@@ -46,56 +75,56 @@ done on the three dimensions of energy, horizontal position, and
 horizontal divergence, using $N_{\rm eng}$, $N_{\rm pos}$, and $N_{\rm
   div}$ number of bins in each dimension, respectively. The total number
 of bins is therefore
-$$
+\begin{equation}
 N_{\rm bin} = N_{\rm eng} N_{\rm pos} N_{\rm div}
-$$
+\end{equation}
 Each bin $i$ is assigned a sampling weight $w_i$; the probability of
 emitting a neutron within bin $i$ is
-$$
+\begin{equation}
 P(i) = \frac{w_i}{\sum_{j=1}^{N_{\rm bin}} w_j}
-$$
+\end{equation}
 In order to avoid false learning, the sampling weight of a bin is
 kept larger than $w_{\rm min}$, defined as
-$$
+\begin{equation}
 w_{\rm min} = \frac{\beta}{N_{\rm bin}}\sum_{j=1}^{N_{\rm bin}}w_j,\qquad
     0 \leq \beta \leq 1
-$$
+\end{equation}
 This way a (small) fraction $\beta$ of the neutrons are sampled
 uniformly from all bins, while the fraction $(1 - \beta)$ are sampled in an adaptive way.
 
 Compared to a uniform sampling of the phase space (where the probability
 of each bin is $1/N_{\rm bin}$), the neutron weight
 must be adjusted by the amount
-$$
+\begin{equation}
 \pi_i = \frac{1/N_{\rm bin}}{P(i)} =
     \frac{\sum_{j=1}^{N_{\rm bin}} w_j}{N_{\rm bin} w_i}
-$$
+\end{equation}
 
-In order to set the criteria for adaption, the Adapt\_check component is
+In order to set the criteria for adaption, the {\bf Adapt\_check} component is
 used (see section~\ref{s:adapt_check}). The source attemps to sample
 only from bins from which neutrons are not absorbed prior to the
-position in the instrument at which the Adapt\_check component is
+position in the instrument at which {\bf Adapt\_check} is
 placed. Among those bins, the algorithm attemps to minimize the variance
-of the neutron weights at the Adapt\_check position. Thus bins that
-would give high weights at the Adapt\_check position are sampled more
+of the neutron weights at the {\bf Adapt\_check} position. Thus bins that
+would give high weights at the {\bf Adapt\_check} position are sampled more
 often (lowering the weights), while those with low weights are sampled
 less often.
 
 Let $\pi = p_1/p_0$ denote the ratio between the neutron weight $p_1$ at
-the Adapt\_check position and the initial weight $p_0$ just after the
-source. For each bin, the component keeps track of the sum $\psi$ of
+the {\bf Adapt\_check} position and the initial weight $p_0$ just after the
+source. For each bin, the component keeps track of the sum $\Sigma$ of
 $\pi$'s as well as of the total number of neutrons $n_i$ from that
-bin. The average weight at the Adapt\_source position of bin $i$ is thus
-$\psi_i/n_i$.
+bin. The average weight at the {\bf Adapt\_source} position of bin $i$ is thus
+$\Sigma_i/n_i$.
 
 We now distribute a total sampling weight of $\beta$ uniformly
 among all the bins, and a total weight of $(1 - \beta)$ among bins in
-proportion to their average weight $\psi_i/n_i$ at the Adapt\_source
+proportion to their average weight $\Sigma_i/n_i$ at the {\bf Adapt\_source}
 position:
-$$
+\begin{equation}
 w_i = \frac{\beta}{N_{\rm bin}} +
-    (1-\beta) \frac{\psi_i/n_i}{\sum_{j=1}^{N_{\rm bins}} \psi_j/n_j}
-$$
+    (1-\beta) \frac{\Sigma_i/n_i}{\sum_{j=1}^{N_{\rm bins}} \Sigma_j/n_j}
+\end{equation}
 After each neutron event originating from bin $i$, the sampling weight $w_i$
 is updated.
 
@@ -127,28 +156,27 @@ The number $\alpha$ is given by the user and specifies (as a fraction
 between zero and one) the point at which the adaption is considered
 good. The initial fraction $\alpha$ of neutron histories are emitted
 with low weight; the rest are emitted with high weight:
-$$ p_0(j) =
+\begin{equation} 
+  p_0(j) =
     \frac{\Phi}{N_{\rm sim}} A \Omega \Delta\lambda
     \frac{\sum_{j=1}^{N_{\rm bin}} w_j}{N_{\rm bin} w_i}
     F(j)
-$$
+\end{equation}
 The choice of the constants $y_0$, $r_0$, and $C$ ensure that
-$$
+\begin{equation}
 \int_{t=0}^{N_{\rm hist}} F(j) = 1
-$$
+\end{equation}
 so that the total intensity over the whole simulation will be correct
 
 Similarly, the adjustment of sampling weights is modified so that the
 actual formula used is
-$$
+\begin{equation}
 w_i(j) = \frac{\beta}{N_{\rm bin}} +
     (1-\beta) \frac{y_0}{y_0 + (1 - y_0) e^{-r_0 j}}
      \frac{\psi_i/n_i}{\sum_{j=1}^{N_{\rm bins}} \psi_j/n_j}
-$$
+\end{equation}
 
 \subsection{The implementation}
-
-\component{Source\_adapt}{K. Nielsen}{$x_{min}$, $x_{max}$, $y_{min}$, $y_{max}$, $E0$, $dE$, dist, $xw$, $yh$, $Phi$}{$\alpha$, $\beta$ (plenty, default values are ok)}{not fully validated}
 
 The heart of the algorithm is a discrete distribution $p$. The
 distribution has $N$ \emph{bins}, $1\ldots N$. Each bin has a value
@@ -158,12 +186,16 @@ Two basic operations are possible on the distribution. An \emph{update}
 adds a number $a$ to a bin, setting $v_i^{\rm new} = v_i^{\rm old} +
 a$. A \emph{search} finds, for given input $b$, the minimum $i$ such
 that
-$$ b \leq \sum_{j=1}^{i} v_j. $$
+\begin{equation}
+ b \leq \sum_{j=1}^{i} v_j. 
+\end{equation}
 The search operation is used to sample from the distribution p. If $r$
 is a uniformly distributed random number on the interval
 $[0;\sum_{j=1}^N v_j]$ then $i = {\rm search}(r)$ is a random number
 distributed according to $p$. This is seen from the inequality
-$$ \sum_{j=1}^{i-1} v_j < r \leq \sum_{j=1}^{i} v_j, $$
+\begin{equation} 
+\sum_{j=1}^{i-1} v_j < r \leq \sum_{j=1}^{i} v_j, 
+\end{equation}
 from which $r \in [\sum_{j=1}^{i-1} v_j; v_i + \sum_{j=1}^{i-1} v_j]$
 which is an interval of length $v_i$. Hence the probability of $i$ is
 $v_i/(\sum_{j=1}^N v_j)$.
@@ -172,28 +204,5 @@ adapt the distribution to the problem at hand during a simulation. Both
 the update and the add operation can be performed very efficiently; how
 this is achieved will be described elsewhere.
 
-The input parameters for Source\_adapt are
-\textit{xmin}, \textit{xmax}, \textit{ymin}, and
-\textit{ymax} in meters to set the source dimensions;
-\textit{dist}, \textit{xw}, and \textit{yh}
-to set the focusing as for Source\_flat (section~\ref{sourceaim}); \textit{E0} and
-\textit{dE} to set the range of energies emitted, in meV (the range
-will be from $\textit{E0} - \textit{dE}$ to
-$\textit{E0} + \textit{dE}$); flux to set the source flux $\Phi$ in ${\rm
-  cm}^{-2} {\rm st}^{-1} \textit{\AA} {\rm s}^{-1}$;
-$N_{\rm eng}$, $N_{\rm pos}$, and $N_{\rm
-  div}$ to set the number of bins in each dimensions; \textit{alpha} and
-\textit{beta} to set the parameters $\alpha$ and $\beta$ as described
-above; and \textit{filename} to give the name of a file in which to
-output the final sampling destribution.
-
-A good general-purpose value for $\alpha$ and $\beta$ is $\alpha = \beta
-= 0.25$. The number of bins to choose will depend on the
-application. More bins will allow better adaption of the sampling, but
-will require more neutron histories to be simulated before a good
-adaption is obtained. The output of the sampling distribution is only
-meant for debugging, and the units on the axis are not necessarily
-meaningful. Setting the filename to \verb+NULL+ disables the output of
-the sampling distribution.
-
-As an alternative, you may use the Source\_Optimizer component (see section \ref{source-optimizer}).
+As an alternative, you may use the {\bf Source\_Optimizer} component 
+(see section \ref{source-optimizer}).
