--- a/trunk/beamstop.tex
+++ b/trunk/beamstop.tex
@@ -2,7 +2,7 @@
 \label{beamstop}
 \index{Optics!Beam stop}
 
-\component{Beamstop}{System}{$x_{min}$, $x_{max}$, $y_{min}$, $y_{max}$, $r$}{}{}
+\component{Beamstop}{System}{$x_{min}$, $x_{max}$, $y_{min}$, $y_{max}$}{$r$}{}
 
 The component {\bf Beamstop} can be seen as the reverse of
 the {\bf Slit} component.
@@ -11,7 +11,7 @@ onto this plane (by the kernel call PROP\_Z0).
 Neutrons within this area are ABSORB'ed,
 while all other neutrons are unaffected.
 
-By using this beamtop, some neutrons contributing to the background
+By using this component, some neutrons contributing to the background
 in a real experiment will be neglected.
 These are the ones that scatter off the side
 of the beamstop, or penetrates the absorbing material.
@@ -23,7 +23,14 @@ $(x_{\rm min}, x_{\rm max}, y_{\rm min}, y_{\rm max})$
 defining the opening of a rectangle, or the radius $r$ of
 a circle, depending on which parameters are specified.
 
-In the case you are not interested by the 'direct beam' (e.g. after a monochromator or sample), it is possible to simulate an ideal beamstop so that only the scattered beam is left. This is for instance the case when you only want to see the scattered neutrons from a sample, removing the direct beam and any background signal from other parts of the instrument.\index{Keyword!EXTEND}
+If the "direct beam" (e.g. after a monochromator or sample) should not be
+simulated, it is possible to emulate an ideal beamstop 
+so that only the scattered beam is left;
+without the use of {\bf Beamstop}:
+This method is useful for instance in the case where only neutrons 
+scattered from a sample are of interest. 
+The example below removes the direct beam and 
+any background signal from other parts of the instrument
 \begin{verbatim}
 COMPONENT MySample=V_sample(...) AT (...)
 EXTEND
@@ -31,4 +38,3 @@ EXTEND
   if (!SCATTERED) ABSORB;
 %}
 \end{verbatim}
-The {\bf Beamstop} component is then not required anymore.
