--- a/trunk/comp_removed.tex
+++ b/trunk/comp_removed.tex
@@ -1,22 +1,32 @@
 % Emacs settings: -*-mode: latex; TeX-master: "manual.tex"; -*-
 
-\chapter{The component library:Abstract}
+\chapter{The component library: Abstract}
 \label{s:components}
 \index{Library!Components|textbf}
 
-This chapter presents an abstract of existing components. As a complement to the \MCS\ component manual, you may use the \verb+mcdoc -s+ command to obtain the on-line component documentation and refer to the McStas web-page~\cite{mcstas_webpage} where all components are documented using the McDoc system.
+This chapter presents an abstract of existing components. 
+As a complement to the \MCS\ component manual, 
+you may use the \verb+mcdoc -s+ command to obtain the on-line 
+component documentation and refer to the McStas web-page~\cite{mcstas_webpage} 
+where all components are documented using the McDoc system.
 
 \section{A short overview of the \MCS\ component library}
 \label{s:comp-overview}
 
-This section gives a quick overview of available \MCS\ components
+The table in this section gives a quick overview of available \MCS\ components
 provided with the distribution, in the \verb+MCSTAS+ library. The
-location of this library is detailed in section~\ref{s:files}. All of them are thought to be reliable, eventhough no absolute guaranty may be given concerning their accuracy.\index{Environment variable!MCSTAS}
+location of this library is detailed in section~\ref{s:files}. 
+All of them are believed to be reliable, and some amount of systematic
+tests have been carried out. 
+However, no absolute guaranty may be given concerning their accuracy.\index{Environment variable!MCSTAS}
 
-The \verb+contrib+ directory of the library contains components that were given by \MCS\ users, but are not validated yet. \index{Library!Components!contrib}
+The \verb+contrib+ directory of the library contains components 
+that were given by \MCS\ users, 
+but where responsibility has not (yet) been taken by the \MCS\ core team. \index{Library!Components!contrib}
 
-Additionally the \verb+obsolete+ directory of the library gathers components that were renamed, or considered to be outdated. Anyway, they still all work as before.
-\index{Library!Components!obsolete}
+Additionally the \verb+obsolete+ directory of the library gathers components that were renamed, or considered to be outdated. 
+These component are kept for backwards compatibility and 
+they still all work as before.\index{Library!Components!obsolete}
 
 The \verb+mcdoc+ front-end (section~\ref{s:mcdoc-run}) enables to display both the
 catalog of the \MCS\ library, e.g using: \index{Tools!mcdoc}
@@ -38,23 +48,24 @@ The first line will search for all components matching the {\it name}, and displ
        {\bf MCSTAS/sources} & Description \\
        \hline
 Adapt\_check & Optimization specifier for the Source\_adapt component. \\
-ESS\_moderator\_long & Parametrised pulsed source for modelling ESS long pulses. \\
+ESS\_moderator\_long & A parametrised pulsed source for modelling ESS long pulses. \\
 ESS\_moderator\_short & A parametrised pulsed source for modelling ESS short pulses. \\
 Moderator  & A simple pulsed source for time-of-flight. \\
 Monitor\_Optimizer &  To be used after the Source\_Optimizer component. \\
 Source\_Maxwell\_3 & Source with up to three Maxwellian distributions \\
-Source\_Optimizer & A component that optimizes the neutron flux passing through the Source\_Optimizer in order to have the maximum flux at the Monitor\_Optimizer position. \\
+Source\_Optimizer & Optimizes the neutron flux passing through the Source\_Optimizer in order to have the maximum flux at the Monitor\_Optimizer position. \\
 Source\_adapt  &       Neutron source with adaptive importance sampling. \\
-Source\_div &          Neutron source with Gaussian divergence. \\
+Source\_div &          Neutron source with a specified Gaussian divergence. \\
 Source\_simple &  A simple circular neutron source with flat energy/wavelength spectrum.\\
-Source\_gen     &    Circular/squared neutron source with flat or Maxwellian
-                      energy/wavelength spectrum (possibly spatially
-                      gaussian). \\
-Virtual\_input &  Source-like component that generates neutron events from an ascii/binary 'virtual source' file (for Virtual\_output). \\
-Virtual\_output &  Detector-like component that writes neutron state (for Virtual\_input). \\
+Source\_gen     &    General neutron source with tunable shape, spectrum,
+                     and divergence. \\
+Virtual\_input &  Source-like component that reads neutron events 
+                  from an ascii/binary 'virtual source' file (recorded by Virtual\_output). \\
+Virtual\_output &  Detector-like component that writes neutron state 
+                   (for use in Virtual\_input). \\
       \hline
     \end{tabular}
-    \caption{Source components of the \MCS\ library.}
+    \caption{Source and source-related components of the \MCS\ library.}
     \label{t:comp-sources}
     \index{Library!Components!sources}
     }
@@ -69,55 +80,35 @@ Virtual\_output &  Detector-like component that writes neutron state (for Virtua
       \hline
        {\bf MCSTAS/optics} & Description \\
        \hline
-Arm                &  Arm/optical bench \\
- Beamstop          &   Rectangular/circular
-                      beam stop. \\
- Bender            &   Models a curved
-                      neutron guide (shown straight). \\
+Arm                &  Arm/optical bench. \\
+ Beamstop          &   Rectangular/circular beam stop. \\
+ Bender            &  A curved neutron guide (shown straight in \verb+mcdisplay+). \\
  Chopper           &   Disk chopper. \\
- Collimator\_linear &  A simple analytical Soller collimator
-                      (with triangular
-                      transmission).  \\
+ Collimator\_linear &  A simple analytical Soller collimator. \\
  Collimator\_radial &  A radial Soller collimator.\\
- FermiChopper      &  Straight Fermi Chopper with
-                        rotating frame. \\
- Filter\_gen        &   This components may
-                      either set the flux
+ FermiChopper      &  Straight Fermi Chopper with rotating-frame calculations. \\
+ Filter\_gen        &   This components may either set the flux
                       or change it (filter-like), using
-                      an external data
-                      file. \\
- Guide             &   Neutron guide. \\
- Guide\_channeled   &   Neutron guide with
-                      channels (bender
-                      section). \\
- Guide\_gravity     &  Neutron guide with gravity. Can be
+                      an external data file. \\
+ Guide             &   Straight neutron guide. \\
+ Guide\_channeled   &   Straight neutron guide with
+                      channels (bender section). \\
+ Guide\_gravity     &  Straight neutron guide with gravity. Can be
                       channeled and focusing. \\
-
- Guide\_wavy        &   Neutron guide with
-                      gaussian waviness. \\
-
+ Guide\_wavy        &  Straight neutron guide with gaussian waviness. \\
  Mirror             &  Single mirror plate. \\
 
-
- Monochromator\_curved & Double bent multiple crystal
-                      slabs with anisotropic gaussian
-                      mosaic. \\
-
- Monochromator\_flat &  Flat Monochromator
-                      crystal with
-                      anisotropic mosaic. \\
-
- Selector            & A velocity selector
-                      (helical lamella
-                      type) such as
+ Monochromator\_curved & Doubly bent multiple crystal
+                      slabs with anisotropic Gaussian mosaic. \\
+ Monochromator\_flat &  Flat Monochromator crystal with
+                      anisotropic Gaussian mosaic. \\
+ Selector            & A velocity selector (helical lamella type) such as
                       V\_selector component. \\
-
  Slit                & Rectangular/circular
                       slit. \\
-
  V\_selector          & Velocity selector. \\
- Vitess\_ChopperFermi & Curved Fermi chopper (slower than FermiChopper). From the Vitess package.\\
-      \hline
+ Vitess\_ChopperFermi & Curved Fermi chopper (slower than FermiChopper). 
+                     From the Vitess package.\\ \hline
     \end{tabular}
     \caption{Optics components of the \MCS\ library.}
     \label{t:comp-optics}
@@ -134,25 +125,20 @@ Arm                &  Arm/optical bench \\
        {\bf MCSTAS/samples} & Description \\
        \hline
   Isotropic\_Sqw & A general S(q,$\omega$) scatterer with multiple scattering, for liquids, powders, glasses, polymers. May be concentrically arranged. Coherent/incoherent, elastic/inelastic scattering. \\
-  Phonon\_simple   & Acoustic phonon isotropic scatterer (simple). \\
+  Phonon\_simple   & Single-crystal sample with acoustic isotropic phonons (simple). \\
   Powder1      &  General powder sample with a single
                 scattering vector. \\
-  Powder2      &  General powder sample with a two
+  Powder2      &  General powder sample with two
                 scattering vectors. \\
-  PowderN      &  General powder sample with a N
+  PowderN      &  General powder sample with N
                 scattering vectors, using a data file. \\
-  Res\_sample   & Sample for resolution function
-                calculation. \\
-
-  Sans\_spheres  & Sample for Small Angle Neutron Scattering - hard spheres in thin solution, mono disperse. \\
-
-  Single\_crystal & Mosaic single crystal with multiple
-                scattering vectors. \\
-  TOFRes\_sample & Sample for resolution function
-                calculation (TOF version). \\
-
-  V\_sample      & Vanadium sample.\\
-      \hline
+  Res\_sample   & Sample-like component for resolution function calculation. \\
+  TOF\_Res\_sample   & Sample-like component for resolution function calculation in TOF instruments. \\
+  Sans\_spheres  & Simple sample for Small Angle Neutron Scattering - hard spheres \\
+  Single\_crystal & Mosaic single crystal with multiple scattering vectors
+                    using a data file. \\
+  TOFRes\_sample & Sample-like component for resolution function calculation (TOF version). \\
+  V\_sample      & Vanadium sample, or other incoherent scatterer.\\ \hline
     \end{tabular}
     \caption{Sample components of the \MCS\ library.}
     \label{t:comp-samples}
@@ -168,60 +154,38 @@ Arm                &  Arm/optical bench \\
       \hline
        {\bf MCSTAS/monitors} & Description \\
        \hline
-DivLambda\_monitor &  Divergence/wavelength monitor. \\
-DivPos\_monitor  &    Divergence/position
-                    monitor (acceptance
-                    diagram). \\
+%DivLambda\_monitor &  Divergence/wavelength monitor. \\
+DivPos\_monitor  &    Divergence/position monitor (acceptance diagram). \\
 Divergence\_monitor &  Horizontal+vertical
                     divergence monitor. \\
-EPSD\_monitor    &    A monitor measuring neutron
-                    intensity vs. position, x,
-                    and neutron energy, E. \\
+%EPSD\_monitor    &    A monitor measuring neutron intensity vs. position, x,
+%                    and neutron energy, E. \\
 E\_monitor       &    Energy-sensitive monitor. \\
-Hdiv\_monitor    &    Horizontal divergence monitor
+%Hdiv\_monitor    &    Horizontal divergence monitor \\
 L\_monitor           Wavelength-sensitive monitor. \\
-Monitor          &   Simple
-                    single detector/monitor. \\
-
-Monitor\_4PI     &    Monitor that detects ALL
-                    non-absorbed neutrons. \\
-Monitor\_nD      &    This
-                    component is a general
-          Monitor that can output
-                    0/1/2D signals (Intensity
-                    or signal vs. [something]
+%Monitor          &   Simple single detector/monitor. \\
+%Monitor\_4PI     &    Monitor that detects ALL non-absorbed neutron rays. \\
+Monitor\_nD      &   General monitor that can output
+                    0/1/2D signals (Intensity or signal vs. [something]
                     and vs. [something] ...). \\
-PSD\_monitor     &    Position-sensitive
-                    monitor. \\
-PSD\_monitor\_4PI  &   Spherical
-                    position-sensitive
-                    detector. \\
-PSDcyl\_monitor  &    A 2D
-                    Position-sensitive
-                    monitor. The shape is
-                    cylindrical with the axis
-                    vertical. The monitor
-                    covers the whole cylinder
-                    (360 degrees). \\
-PSDlin\_monitor   &   Rectangular 1D PSD,
-                    measuring intensity vs.
-                    vertical position, x. \\
-PreMonitor\_nD    &   This component is a
-                    PreMonitor that is to be
+PSD\_monitor     &    Position-sensitive monitor. \\
+%PSD\_monitor\_4PI  &   Spherical position-sensitive detector. \\
+%PSDcyl\_monitor  &    A 2D position-sensitive monitor. The shape is
+%                    cylindrical with the axis vertical. The monitor
+%                    covers the whole cylinder (360 degrees). \\
+%PSDlin\_monitor   &   Rectangular 1D PSD, measuring intensity vs.
+%                    vertical position, x. \\
+PreMonitor\_nD    &   This component is a PreMonitor that is to be
                     used with one Monitor\_nD,
-                    in order to record some
-                    neutron parameter correlations. \\
-Res\_monitor      &   Monitor for resolution
-                    calculations (Res\_sample and TOFRes\_sample). \\
-TOFLambda\_monitor &  Time-of-flight/wavelength
-                    monitor. \\
-TOF\_cylPSD\_monitor & Cylindrical (2pi) PSD
-                    Time-of-flight monitor. \\
-TOF\_monitor     &    Rectangular Time-of-flight
-                    monitor. \\
-TOFlog\_mon      &    Rectangular Time-of-flight
-                    monitor with logarithmic
-                    time binning. \\
+                    in order to record some neutron parameter correlations. \\
+Res\_monitor      &   Monitor for resolution function calculations \\
+TOF\_Res\_monitor      &   Monitor for resolution function calculations
+                        for TOF instruments \\
+%TOFLambda\_monitor &  Time-of-flight/wavelength monitor. \\
+%TOF\_cylPSD\_monitor & Cylindrical (2pi) PSD Time-of-flight monitor. \\
+TOF\_monitor     &    Rectangular Time-of-flight monitor. \\
+%TOFlog\_mon      &    Rectangular Time-of-flight monitor with logarithmic
+%                    time binning. \\
       \hline
     \end{tabular}
     \caption{Monitor components of the \MCS\ library.}
@@ -238,14 +202,10 @@ TOFlog\_mon      &    Rectangular Time-of-flight
       \hline
        {\bf MCSTAS/misc} & Description \\
        \hline
- Progress\_bar     &       A simulation
-                      progress bar. May also trigger intermediate SAVE.\\
- Vitess\_input     &   Read neutron state
-                      parameters from
-                      VITESS neutron file.\\
- Vitess\_output    &  Write neutron state
-     parameters to VITESS
-                      neutron file.\\
+ Progress\_bar     &  Displays status of a running simulation. 
+                      May also trigger intermediate SAVE.\\
+ Vitess\_input     &   Read neutron state parameters from a VITESS neutron file.\\
+ Vitess\_output    &  Write neutron state parameters to a VITESS neutron file.\\
       \hline
     \end{tabular}
     \caption{Miscellaneous components of the \MCS\ library.}
@@ -262,35 +222,23 @@ TOFlog\_mon      &    Rectangular Time-of-flight
       \hline
        {\bf MCSTAS/contrib} & Description \\
        \hline
- Al\_window     &         Aluminium
-                        window in the beam. \\
- Collimator\_ROC   &      Radial
-                        Oscillationg
-                        Collimator (ROC). \\
- Filter\_graphite  &      Pyrolytic
-                        graphite filter
-                        (analytical model). \\
+ Al\_window     &         Aluminium transmission window. \\
+ Collimator\_ROC   &      Radial Oscillating Collimator (ROC). \\
+ Filter\_graphite  &      Pyrolytic graphite filter (analytical model). \\
  Filter\_powder   &       Box-shaped powder
                         filter based on Single\_crystal (unstable). \\
  Guide\_curved     &     Non focusing continuous curved guide (shown curved). \\
- Guide\_honeycomb & Neutron guide
-                        with gravity and
-                        honeycomb geometry. Can be
-                        channeled and
-                        focusing. \\
+ Guide\_honeycomb & Neutron guide with gravity and honeycomb geometry. Can be
+                        channeled and/or focusing. \\
  Guide\_tapering  &     Rectangular tapered guide (parabolic, elliptic, sections ...). \\
-
  He3\_cell    &           Polarised 3He cell. \\
  ISIS\_moderator    &     ISIS Target 1 and 2 moderator models based on MCNP calculations. \\
- Monochromator\_2foc   &  Double bent
-                        monochromator with
-                        multiple slabs. \\
+ Monochromator\_2foc   &  Doubly bent monochromator with multiple slabs. \\
  PSD\_monitor\_rad & A banana PSD monitor. \\
  SiC           &         SiC multilayer sample for reflectivity simulations. \\
  SNS\_source    & SNS moderator models based on MCNP calculations. \\
  Virtual\_tripoli4\_input & Reads a 'Batch' neutron events file from Tripoli 4. \\
  Virtual\_tripoli4\_output& Writes a 'Batch' neutron events file for Tripoli 4. \\
-
       \hline
     \end{tabular}
     \caption{Contributed components of the \MCS\ library.}
@@ -334,13 +282,12 @@ TOFlog\_mon      &    Rectangular Time-of-flight
       \hline
        {\bf MCSTAS/data} & Description \\
        \hline
- *.lau & Laue pattern file, as issued from Crystallographica or FullProf. Used e.g. for Powder1, PowderN, Single\_crystal
+ *.lau & Laue pattern file, as issued from Crystallographica or FullProf.
        Data: [ h   k   l Mult. d-space 2Theta   F-squared ] \\
  *.trm & transmission file, typically for monochromator crystals and filters.
        Data: [ k (Angs-1) , Transmission (0-1) ] \\
  *.rfl & reflectivity file, typically for mirrors and monochromator crystals.
        Data: [ k (Angs-1) , Reflectivity (0-1) ] \\
- *.sqw & Sample dynamical structure factors, e.g. for Isotropic\_Sqw. Data: Vector $q$, then vector $omega$, then matrix $S(q,\omega)$. \\
       \hline
     \end{tabular}
     \caption{Data files of the \MCS\ library.}
