--- a/trunk/datablad_comp.tex
+++ b/trunk/datablad_comp.tex
@@ -1,10 +1,3 @@
-% Emacs settings: -*-mode: latex; TeX-master: "manual.tex"; -*-
-
-{% Make all definitions local.
-
-%
-% This was modified from risoe.sty, <2 Aug 95>
-%
 \newcommand{\titel}[1]{{\egtrm Title and author(s)}
  \rm\\[3dd]#1\\[\baselineskip]}
 \newcommand{\forfatter}[1]{{\egtrm}
@@ -58,7 +51,7 @@ Telefax +45 4677 4013
 \begin{datablad}
 \titel{Component Manual to the Neutron Ray-Tracing Package
  \MCS , Version \version}
-\forfatter{Kim Lefmann, Peter Kj\ae r Willendrup, Emmanuel Farhi, Klaus Lieutenant}
+\forfatter{Kim Lefmann, Peter Kj\ae r Willendrup, Kristian Nielsen, Emmanuel Farhi, Klaus Lieutenant}
 \isbn{87--550--2929--9; 87--550--2930--2 (Internet)}\issn{0106--2840}
 \afdeling{Materials Research Department}
 \dato{\reldate}
@@ -69,4 +62,3 @@ Telefax +45 4677 4013
 \deskriptorer{Neutron Instrumentation; Monte Carlo Simulation; Software}
 \end{datablad}
 
-}
