--- a/trunk/div_monitor.tex
+++ b/trunk/div_monitor.tex
@@ -9,12 +9,12 @@ The component {\bf Divergence\_monitor} is a two-dimensional monitor,
 which resembles {\bf PSD\_Monitor}. As for this component,
 the detector window is set
 by the $x$ and $y$ input coordinates.
-The {\bf Divergence\_ monitor} is sensitive to the neutron divergence,
+{\bf Divergence\_ monitor} is sensitive to the neutron divergence,
 defined by
 $\eta_{\rm h} = \tan^{-1}(v_x/v_z)$ and $\eta_{\rm v} = \tan^{-1}(v_y/v_z)$.
 The neutron counts are being histogrammed
-into $n_{\rm v} \times n_{\rm h}$ pixels, each of which acts like a single
-counter. The divergence range accepted is in the vertical direction
+into $n_{\rm v} \times n_{\rm h}$ pixels. 
+The divergence range accepted is in the vertical direction
 $[-\eta_{\rm v,max}; \eta_{\rm v,max}]$, and simular for the horizontal
 direction.
 
@@ -22,5 +22,5 @@ The output from {\bf PSD\_monitor} is the integrated counts, $n, I, M_2$,
 as well as
 three two-dimensional arrays of counts: $n(\eta_{\rm v},\eta_{\rm h}),
 I(\eta_{\rm v},\eta_{\rm h}), M_2(\eta_{\rm v},\eta_{\rm h})$.
-The arrays are written to a file and can be read e.g. by the tool
-{\bf MC\_plot}, see the system manual.
+The arrays are written to a file, \verb+filename+, 
+and can be read e.g. by the tool {\bf MC\_plot}, see the system manual.
