--- a/trunk/divpos_monitor.tex
+++ b/trunk/divpos_monitor.tex
@@ -5,14 +5,13 @@
 \component{DivPos\_monitor}{System}{$x_{\rm min}$, $x_{\rm max}$, $y_{\rm min}$, $y_{\rm max}$, $n_x$, $n_{\rm h}$, $\eta_{\rm h,max}$, filename}{}{}
 
 {\bf DivPos\_monitor} is a two-dimensional monitor component,
-which is sensitive to both spatial position ($x$) and divergence
+which is sensitive to both horizontal position ($x$) and horizontal divergence
 defined by $\eta_{\rm h} = \tan^{-1}(v_x/v_z)$.
 The detector window is set
 by the $x$ and $y$ input coordinates.
 
 The neutron counts are being histogrammed
-into $n_x \times n_{\rm h}$ pixels, each of which acts like a single
-counter. The horizontal divergence range accepted is
+into $n_x \times n_{\rm h}$ pixels. The horizontal divergence range accepted is
 $[-\eta_{\rm h,max}; \eta_{\rm h,max}]$, and the horizontal position
 range is the size of the detector.
 
@@ -23,6 +22,6 @@ I(x,\eta_{\rm h}), M_2(x,\eta_{\rm h})$.
 The arrays are written to a file and can be read e.g. by the tool
 {\bf MC\_plot}, see the system manual.
 
-This component can easily be change into being sensitive
-to $y$ and vertical divergence but ROTATE'ing it
-90 degrees around the $z$ direction.
+This component can be used for measuring acceptance diagrams \ref{cussen}.
+{\bf PSD\_monitor} can easily be changed into being sensitive
+to $y$ and vertical divergence by a ROTATED (0,0,90) command.
