--- a/trunk/guide.tex
+++ b/trunk/guide.tex
@@ -1,63 +1,14 @@
 % Emacs settings: -*-mode: latex; TeX-master: "manual.tex"; -*-
 
-\chapter{Advanced optical components: mirrors and guides}
+\chapter{Advanced optical components: mirrors, guides, and choppers}
 
 This section describes advanced neutron optical
-components such as supermirrors and guides.
-The first subsection, however, contains
-only a description of the reflectivity of a supermirror.
-
-\section{Mirror reflectivity}
-\label{s:mirrorreflect}
-To compute the reflectivity of the supermirrors, we use an empirical
-formula derived from experimental data (see figure~\ref{f:reflectivity}).
-The reflectivity is given by the following formula
-\begin{equation}
-  R = \left\{
-    \begin{array}{ll}
-      R_0 & \textrm{if $Q \leq Q_{\rm c}$} \\
-      \frac{1}{2}R_0(1 - \tanh[(Q - m Q_{\rm c})/W])(1-\alpha(Q-Q_{\rm c}))
-         & \textrm{if $Q > Q_{\rm c}$}
-    \end{array}
-  \right.
-\end{equation}
-
-\begin{figure}
-  \begin{center}
-    \includegraphics[width=0.6\textwidth]{figures/supermirror.eps}
-  \end{center}
-\caption{A typical reflectivity curve for a supermirror,
-Eq.~(\protect\ref{e:reflectivity}).}
-\label{f:reflectivity}
-\end{figure}
-Here $Q$ is the length of the scattering vector (in \AA$^{-1}$)
-defined by
-\begin{equation} \label{e:reflectivity}
-Q = |{\bf k}_{\bf i} - {\bf k}_{\bf f}|
-  = \frac{m_{\rm n}}{\hbar} |{\bf v}_{\bf i} - {\bf v}_{\bf f}|,
-\end{equation}
-$m_{\rm n}$ being the neutron mass.
-The value $m$ is a parameter determined by the mirror materials,
-the bilayer sequence, and the number of bilayers.
-As can be seen, $R=R_0$ for $Q < Q_{\rm c}$, which is the
-critical scattering wave vector for a single layer of the mirror
-material. At higher values of $Q$, the reflectivity starts falling
-linearly with a slope $\alpha$ until a cut-off at $Q = m Q_{\rm c}$.
-The width of the cut-off is denoted $W$. For the curve in
-figure~\ref{f:reflectivity}, the values are
-$$ m=4 \qquad R_0=1 \qquad Q_{\rm c} = 0.02\mbox{ \AA}^{-1} \qquad
-   \alpha = 6.49\mbox{ \AA} \qquad W=1/300\mbox{ \AA}^{-1} $$
-As a special case, if $m=0$ then the reflectivity is zero for all $Q$,
-   \textit{ie.} the surface is completely absorbing.
-
-In the components, the neutron weight is adjusted with the amount $\pi_i = R$.
-To avoid spending large amounts of computation time on very low-weight
-neutrons, neutrons for which the reflectivity is lower than about
-$10^{-10}$ are ABSORB'ed.
+components such as supermirrors and guides as well as various rotating choppers.
+A description of the reflectivity of a supermirror is found 
+in section~\ref{s:mirror}.
 
 \section{Mirror: The single mirror}
-\index{Optics!Single mirror plate}
-
+\label{s:mirror}
 \component{Mirror}{System}{$l$, $h$, $m$}{$R_0, Q_c, W, \alpha$}{validated, no gravitation support}
 
 The component {\bf Mirror}
@@ -75,17 +26,69 @@ $x$-$y$ plane, an incoming neutron with velocity
 ${\bf v}_{\rm i} = (v_x,v_y,v_z)$
 is reflected with velocity ${\bf v}_{\rm f} = (v_x,v_y,-v_z)$.
 The computation of the reflectivity is handled as detailed in
-section~\ref{s:mirrorreflect}.
+section~\ref{ss:mirrorreflect}.
 
 The input parameters of this component are
 the rectangular mirror dimensions $(l, h)$
 and the values of $R_0, m, Q_c, W$, and $\alpha$ for the mirror.
+As a special case, if $m=0$ then the reflectivity is zero for all $Q$,
+\textit{i.e.}\ the surface is completely absorbing.
 
 This component may produce wrong results with gravitation support.
 
+\subsection{Mirror reflectivity}
+\label{ss:mirrorreflect}
+To compute the reflectivity of the supermirrors, we use an empirical
+formula derived from experimental data \cite{pb_241_50}, 
+see Fig.~\ref{f:reflectivity}. The reflectivity is given by 
+\begin{equation} \label{e:Rmirror}
+  R = \left\{
+    \begin{array}{ll}
+      R_0 & \textrm{if $Q \leq Q_{\rm c}$} \\
+      \frac{1}{2}R_0(1 - \tanh[(Q - m Q_{\rm c})/W])(1-\alpha(Q-Q_{\rm c}))
+         & \textrm{if $Q > Q_{\rm c}$}
+    \end{array}
+  \right.
+\end{equation}
+
+Here $Q$ is the length of the scattering vector (in \AA$^{-1}$)
+defined by
+\begin{equation} \label{e:reflectivity}
+Q = |{\bf k}_{\bf i} - {\bf k}_{\bf f}|
+  = \frac{m_{\rm n}}{\hbar} |{\bf v}_{\bf i} - {\bf v}_{\bf f}|,
+\end{equation}
+$m_{\rm n}$ being the neutron mass.
+The number $m$ in (\ref{e:Rmirror}) is a parameter determined by 
+the mirror materials,
+the bilayer sequence, and the number of bilayers.
+As can be seen, $R=R_0$ for $Q < Q_{\rm c}$, where $Q_{\rm c}$ is the
+critical scattering wave vector for a single layer of the mirror
+material. At higher values of $Q$, the reflectivity starts falling
+linearly with a slope $\alpha$ until a "soft cut-off" at $Q = m Q_{\rm c}$.
+The width of this cut-off is denoted $W$. See the example reflection curve in
+figure~\ref{f:reflectivity}.
+
+\subsection{Algorithm}
+In the components, the neutron weight is adjusted with the amount $\pi_i = R$.
+To avoid spending large amounts of computation time on very low-weight
+neutrons, neutrons for which the reflectivity is lower than about
+$10^{-10}$ are ABSORB'ed.
+
+\begin{figure}
+  \begin{center}
+    \includegraphics[width=0.6\textwidth]{figures/supermirror.eps}
+  \end{center}
+\caption{A typical reflectivity curve for a supermirror,
+Eq.~(\protect\ref{e:reflectivity}). The used values are
+$ m=4$, $R_0=1$, $Q_{\rm c} = 0.02$~\AA$^{-1}$, $\alpha = 6.49$~\AA,
+$ W=1/300$~\AA$^{-1}$.
+}
+\label{f:reflectivity}
+\end{figure}
+
+\newpage
 
 \section{Guide: The guide section}
-\index{Optics!Guide}
 
 \component{Guide}{System}{$w_1, h_1$, $w_2, h_2$, $l$, $m$}{$R_0, Q_c, W, \alpha$}{validated, no gravitation support}
 
@@ -96,17 +99,24 @@ openings parallel to the $x$-$y$ plane. The entrance has the dimensions
 $(w_1,h_1)$ and placed at $z=0$. The exit is of dimensions $(w_2,h_2)$
 and is placed at $z=l$ where $l$ is the guide length. See
 figure~\ref{f:guide}. Neutrons not clearing the guide entrance are
-ABSORB'ed. For a more general guide simulation, see the Channeled\_guide
-component in section~\ref{s:channeled_guide}.
+ABSORB'ed. For a more general guide simulation, see {\bf Channeled\_guide}
+in section~\ref{s:channeled_guide}.
+
+Further input parameters are the values of $R_0, m, Q_c, W$, and $\alpha$ 
+as for {\bf Mirror}.
+
+{\bf Guide} may produce wrong results with gravitation support. 
+Use {\bf Guide\_gravity} (section \ref{s:guide_gravity}) in this case.
 
 \begin{figure}
   \begin{center}
-    \includegraphics[width=0.9\textwidth]{figures/guide1.eps}
+    \includegraphics[width=0.7\textwidth]{figures/guide1.eps}
   \end{center}
 \caption{The geometry used for the guide component.}
 \label{f:guide}
 \end{figure}
 
+\subsection{Guide geometry and reflection}
 For computations on the guide geometry, we define the planes of the four
 guide sides by giving their normal vectors (pointing into the guide)
 and a point lying in the plane:
@@ -129,12 +139,17 @@ With these definitions, the time of intersection of the neutron with a
 guide side can be computed by considering the projection onto the
 normal:
 \begin{equation}
-t_1 = {({\bf O} - {\bf r}_0) \cdot {\bf n} \over {\bf v} \cdot {\bf n}}
+t^\alpha_\beta = \frac{({\bf O}^\alpha_\beta - {\bf r}_0) \cdot {\bf n}^\alpha_\beta} 
+  {{\bf v} \cdot {\bf n}^\alpha_\beta}  ,
 \end{equation}
-For a neutron that leaves the guide through the guide exit we have
+where $\alpha$ and $\beta$ are indices for the different guide walls, 
+assuming the values (h,v) and (1,2), respectively.
+For a neutron that leaves the guide directly through the guide exit we have
 \begin{equation}
-t_2 = {l - z_0 \over v_z}
+t_{\rm exit} = \frac{l - z_0}{v_z}
 \end{equation}
+
+\subsection{Algorithm}
 To compute the interaction of the neutron
 with the guide, the neutron is initially propagated to the $z = 0$ plane of the
 guide entrance. If it misses the entrance, it is ABSORB'ed. Otherwise,
@@ -175,60 +190,67 @@ there is no need to actually compute $t$. Some redundant computations
 are also avoided by utilizing symmetry and the fact that many
 components of {\bf n} and {\bf O} are zero.
 
-The input parameters of this component are
-the opening sizes of the entry and exit point of the
-guide, $(w_1, h_1)$ and $(w_2, h_2)$, respectively,
-the guide length, $l$,
-and the values of $R_0, m, Q_c, W$, and $\alpha$ for the mirror.
-
-This component may produce wrong results with gravitation support. Use Guide\_gravity (section \ref{s:guide_gravity}) in this case.
-
+\newpage
 
 \section{Guide\_channeled: A guide section component with multiple channels}
 \label{s:channeled_guide}
 \index{Optics!Guide with channels (non focusing)}
 
-\component{Guide\_channeled}{System}{$w_1, h_1$, $w_2, h_2$, $l$, $k$, $m_x, m_y$}{$d, R_0, Q_{cx}, Q_{cy}, W, \alpha_x, \alpha_y$}{validated, no gravitation support}
+\component{Guide\_channeled}{System}{$w_1, h_1$, $w_2, h_2$, $l$, $k$, $m_x, m_y$}{$d, R_0, Q_{cx}, Q_{cy}, W, \alpha_x, \alpha_y$}{partly validated, no gravitation support}
 
-The component Guide\_channeled is a more flexible variation of the Guide
-component described in the previous section. It allows the specification
+The component {\bf Guide\_channeled} is a more complex variation of {\bf Guide}
+described in the previous section. It allows the specification
 of different supermirror parameters for the horizontal and vertical
 mirrors, and also implements guides with multiple channels as used in
 neutron bender devices. By setting the $m$ value of the supermirror
 coatings to zero, nonreflecting walls are
 simulated; this may be used to simulate a Soller collimator.
 
-The channel walls are assumed to be infinitely absorbing. The
-implementation is basen on that of the Guide component. Initially, the
+The input parameters are $w_1$, $h_1$, $w_2$, $h_2$, and $l$ 
+to set the guide dimensions as for {\bf Guide} 
+(entry window, exit window, and length); 
+$k$ to set the number of channels; $d$ to set the thickness of the
+channel walls; and $R_0$, $W$, $Q_{cx}$, $Q_{cy}$, $\alpha_x$, $\alpha_y$, 
+$m_x$, and $m_y$ to set the supermirror parameters as described under {\bf Guide}
+(the names with \textit{x} denote the vertical mirrors, 
+and those with \textit{y} denote the horizontal ones).
+
+\subsection{Algorithm}
+The implementation is based on that of {\bf Guide}. Initially, the
 channel which the neutron will enter is computed. The $x$ coordinate is
 then shifted so that the channel can be simulated as a single instance
 of the Guide component. Finally the coordinates are restored when the
 neutron exits the guide or is absorbed.
 
-The input parameters are \textit{w1}, \textit{h1}, \textit{w2},
-\textit{h2}, and \textit{l} to set the guide dimensions in meters as for
-the Guide component (entry window, exit window, and length); \textit{k}
-to set the number of channels; \textit{d} to set the thickness of the
-channel walls, in meters; and \textit{R0}, \textit{W}, \textit{Qcx},
-\textit{Qcy}, \textit{alphax}, \textit{alphay}, \textit{mx}, and \textit{my} to
-set the supermirror parameters as described above (the names with \textit{x}
-denote the vertical mirrors, and those with \textit{y} denote the horizontal
-ones).
+\subsection{Known problems}
+This component may produce wrong results with gravitation support. Use Guide\_gravity (section \ref{s:guide_gravity}) in this case. 
+Additionally, the focusing channeled geometry (for $k > 1$ and different
+values of $w_1$ and $w_2$) is buggy 
+(wall slopes are not computed correctly, and the component 'leaks' neutrons).
 
-This component may produce wrong results with gravitation support. Use Guide\_gravity (section \ref{s:guide_gravity}) in this case. Additionally, the focusing channeled geometry ($k > 1, w_1$ and $w_2$ different) is buggy (wall slopes is not computed correctly, and the component 'leaks' neutrons).
+\newpage
 
-
-\section{Guide\_gravity: A guide section component with multiple channels and gravitation handling}
+\section{Guide\_gravity: A guide with multiple channels and gravitation handling}
 \label{s:guide_gravity}
 \index{Optics!Guide with channels and gravitation handling}
 
 \component{Guide\_gravity}{System}{$w_1, h_1$, $w_2, h_2$, $l$, $k$, $m$}{$d, R_0, Q_c, W, \alpha$, wavy, chamfers, $k_h$, $n$, $G$}{fully validated, {\bf with} gravitation support}
 
-This component is a variation of the Guide\_channeled component (section \ref{s:channeled_guide}) with the ability to handle gravitation effects and functional channeled focusing geometry. Channels can be specified in two dimensions, producing a 2D array ($k, k_h$) on smaller guide channels.
+This component is a variation of {\bf Guide\_channeled} 
+(section \ref{s:channeled_guide}) with the ability to handle 
+gravitation effects and functional channeled focusing geometry. 
+Channels can be specified in two dimensions, 
+producing a 2D array ($k, k_h$) on smaller guide channels.
 
-Waviness effects, supposed to be randomly distributed (\emph{i.e.} periodic waviness is not modeled here) can be specified globally, or for each part of the guide section. Additionally, chamfers (originating from the substrate manufacturing) may be defined the same way.
+Waviness effects, supposed to be randomly distributed 
+(\emph{i.e.} non-periodic waviness) 
+can be specified globally, or for each part of the guide section. 
+Additionally, chamfers (originating from the substrate manufacturing) 
+may be defined the same way.
 
-The straight section of length $l$ may be divided into $n$ bits of same length within which chamfers are taken into account.
+The straight section of length $l$ may be divided into $n$ bits of same length 
+within which chamfers are taken into account.
 
-To activate gravitation support, either select the \MCS\ gravitation support, or set the gravitation field strength $G$ (e.g. -9.81 on earth).
+To activate gravitation support, either select the \MCS\ gravitation support, 
+or set the gravitation field strength $G$ (e.g. -9.81 on Earth).
 
