--- a/trunk/monochromator.tex
+++ b/trunk/monochromator.tex
@@ -9,9 +9,9 @@ perpendicular to the surface.
 The component {\bf Monochromator\_curved} is similar, 
 but models a singly or doubly bend monochromator crystal arrangement.
 
-A much more general model of scatteing from a single crystal is 
+A much more general model of scattering from a single crystal is 
 found in the component {\bf Single\_crystal},
-which is presented under Samples.
+which is presented under Samples, chapter~\ref{c:samples}.
 
 \input{monochromator_flat.tex}
 \newpage
