--- a/trunk/monochromator_curved.tex
+++ b/trunk/monochromator_curved.tex
@@ -5,7 +5,7 @@ a single scattering vector}
 \label{s:monochromator_curved}
 \index{Optics!Monochromator, curved}
 
-\component{Monochromator\_curved}{System, Peter Link}{$z_{\rm w}$, $y_{\rm h}$, gap, $\eta_{\rm h}$, $\eta_{\rm v}$, $n_{\rm h}$, $n_{\rm v}$, $R_0$, $Q$, $r_{\rm h}$, $r_{\rm v}$}{$d_{\rm m}$, $\eta$, $h$, $w$, verbose, transmit, reflect}{}
+\component{Monochromator\_curved}{(System) Peter Link, FRM-2}{$z_{\rm w}$, $y_{\rm h}$, gap, $\eta_{\rm h}$, $\eta_{\rm v}$, $n_{\rm h}$, $n_{\rm v}$, $R_0$, $Q$, $r_{\rm h}$, $r_{\rm v}$}{$d_{\rm m}$, $\eta$, $h$, $w$, verbose, transmit, reflect}{}
 
 \begin{figure}
   \begin{center}
@@ -24,18 +24,19 @@ curved monochromator or analyzer, in reflecting geometry.
 
 The component uses  rectangular pieces of monochromator material
 as described in {\bf Monochromator\_curved}.
-The important parameters are the piece height and width,
-$y_{\rm h}$ and $z_{\rm w}$, respectively, the
-horizontal and vertical mosaicities, $\eta_{\rm h}$ and $\eta_{\rm v}$,
-respectively. The number of pieces vertically and horizontally are called
-$n_{\rm v}$ and $n_{\rm h}$, respectively, and the vertical and horizontal
-radii of curvature are named $r_{\rm v}$ and $r_{\rm h}$, respectively.
 The scattering vector is named $Q$, and as described in
 {\bf Monochromator\_flat}, multiples of $Q$ can be applied.
-All single crystals are positioned in the same vertical plane, but tilted accordingly to the curvature radius.
+Other important parameters are the piece height and width,
+$y_{\rm h}$ and $z_{\rm w}$, respectively, the
+horizontal and vertical mosaicities, $\eta_{\rm h}$ and $\eta_{\rm v}$,
+respectively. 
+If just one mosaicity, $\eta$, is specified, this the same for both directions.
 
-If just one mosaicity, $\eta$, is specified, this the same for
-both directions.
+The number of pieces vertically and horizontally are called
+$n_{\rm v}$ and $n_{\rm h}$, respectively, and the vertical and horizontal
+radii of curvature are named $r_{\rm v}$ and $r_{\rm h}$, respectively.
+All single crystals are positioned in the same vertical plane, 
+but tilted accordingly to the curvature radius.
 
 The constant monochromator reflectivity, $R_0$ can be replaced by
 a file of tabulated reflectivities. In the same sense, the transmission
