--- a/trunk/phonon.tex
+++ b/trunk/phonon.tex
@@ -7,4 +7,4 @@
 \index{Inelastic scattering}
 
 \component{Phonon\_simple}{Kim Lefmann}{ $r_{\rm o}$, $h$, $r_{\rm foc}$, $x_{\rm target}$, $y_{\rm target}$, $z_{\rm target}$, $\sigma_{\rm abs}$, $\sigma_{\rm inc}$, $a$, $b$, $M$, $c$, $DW$, $T$}{$w_x$, $h_y$, $t_z$, $w_{\rm focus}, h_{\rm focus}$, $w_{\rm foc, angle}$, $h_{\rm foc, angle}$, target\_index}{}
-
+\input{phonon_extra.tex}
