--- a/trunk/psd_monitor.tex
+++ b/trunk/psd_monitor.tex
@@ -1,24 +1,20 @@
 % Emacs settings: -*-mode: latex; TeX-master: "manual.tex"; -*-
 
 \section{PSD\_monitor: The PSD monitor}
-\component{PSD\_monitor}{System}{$x_{\rm min}$, $x_{\rm max}$, $y_{\rm min}$, $y_{\rm max}$, $n_x$, $n_y$, filename}{}{}
 \index{Monitors!Position sensitive detector (PSD)}
+\component{PSD\_monitor}{System}{$x_{\rm min}$, $x_{\rm max}$, $y_{\rm min}$, $y_{\rm max}$, $n_x$, $n_y$, filename}{}{}
 
 
 The component {\bf PSD\_monitor} resembles other monitors, e.g.
-{\bf E\_Monitor}, and also propagates the neutron to the detector
+{\bf TOF\_Monitor}, and also propagates the neutron ray to the detector
 surface in the $(x,y)$-plane, where the detector window is set
 by the $x$ and $y$ input coordinates.
-The PSD monitor, though, is not sensitive to the neutron energy, but
-rather its position. the rectangular monitor window is divided
-into $n_x \times n_y$ pixels, each of which acts like a single
-counter.
+The PSD monitor, though, is not sensitive to the neutron arrival time, but
+rather its position. The rectangular monitor window, given by the $x$ and $y$
+limits is divided into $n_x \times n_y$ pixels.
 
 The output from {\bf PSD\_monitor} is the integrated counts, $n, I, M_2$,
 as well as
 three two-dimensional arrays of counts: $n(x,y), I(x,y), M_2(x,y)$.
-The arrays are written to a file and can be read e.g. by the tool
+The arrays are written to a file, \verb+filename+, and can be read e.g. by the tool
 {\bf MC\_plot}, see the system manual.
-
-{\bf Burde man ikke kunne specificere en radius,
-og s\aa\ blev den en 2D cylinder detektor??}
