--- a/trunk/slit.tex
+++ b/trunk/slit.tex
@@ -2,7 +2,7 @@
 \label{slit}
 \index{Optics!Slit}
 
-\component{Slit}{System}{$x_{\rm min}$, $x_{\rm max}$, $y_{\rm min}$, $y_{\rm max}$, $r$}{$p_{\rm cut}$}{}
+\component{Slit}{System}{$x_{\rm min}$, $x_{\rm max}$, $y_{\rm min}$, $y_{\rm max}$}{$r$, $p_{\rm cut}$}{}
 
 The component {\bf Slit} is a very simple construction.
 It sets up an opening at $z=0$, and propagates the neutrons
@@ -11,7 +11,7 @@ Neutrons within the slit opening are unaffected,
 while all other neutrons
 are discarded by the kernel call ABSORB.
 
-By using this simple slit, some neutrons contributing to the background
+By using {\rm Slit}, some neutrons contributing to the background
 in a real experiment will be neglected.
 These are the ones that scatter off the inner side
 of the slit, penetrates the slit material,
@@ -22,9 +22,11 @@ $(x_{\rm min}, x_{\rm max}, y_{\rm min}, y_{\rm max})$
 defining the opening of the rectangle, or the radius $r$ of
 a circular opening, depending on which parameters are specified.
 
-The slit component can also be used to discard unsignificant (very low weight)
+The slit component can also be used to discard insignificant 
+({\em i.e.}\ very low weight)
 neutron rays, that in some simulations may be very abundant and therefore
 time consuming. If the optional parameter $p_{\rm cut}$ is set, all
 neutron rays with $p<p_{\rm cut}$ are ABSORB'ed.
+This use is recommended in connection with {\bf Virtual\_output}.
 
 
