--- a/trunk/source_div.tex
+++ b/trunk/source_div.tex
@@ -1,26 +1,21 @@
-\section{Source\_div: A divergent source}
+\section{Source\_div: A continuous source with specified divergence}
 \label{source-div}
 \index{Sources!Source\_div}
 
-\component{Source\_div}{System}{ $w$, $h$, $\delta_h$, $\delta_v$, $E_0$, $\Delta E$}{$\lambda_0$, $d\lambda$, gauss}{Validated}
+\component{Source\_div}{System}{ $w$, $h$, $\delta_h$, $\delta_v$, $E_0$, $\Delta E$}{$\lambda_0$, $\Delta\lambda$, gauss}{Validated}
 
-{\bf Source\_div} is a rectangular source which emits a
-beam of a certain divergence around the main exit direction
-(the direction of the $z$ axis).
+{\bf Source\_div} is a rectangular source, $w \times h$ (in m), which emits a
+beam of a specified divergence around the direction of the $z$ axis.
 The beam intensity is uniform over
 the whole of the source, and the energy (or wavelength) distribution
-of the beam is uniform.
+of the beam is uniform over the specified energy range
+$E_0 \pm \Delta E$ (in meV), or alternatively
+the wavelength range $\lambda_0 \pm \delta\lambda$ (in \AA ).
+
+The source divergencies are $\delta_h$ and $\delta_v$ (FWHM in degrees).
+If the \verb+gauss+ flag is set to 0 (default), 
+the divergence distribution is uniform, otherwise it is Gaussian.
 
 This component may be used as a simple model of the
-beam profile at the end of a guide or at the sample
-position.
-
-The input parameters for Source\_div are the source dimensions
-$w$ and $h$ (in m), the divergencies $\delta_h$ and $\delta_v$ (FWHM in degrees),
-and the mean energy $E_0$ and the energy spread $dE$ (both in meV).
-The neutron energy range is $E_0 \pm \Delta E$, or alternatively
-the wavelength range is $\lambda_0 \pm d\lambda$
-
-If the \verb+gauss+ flag is set to 0, the divergence distribution is uniform, 
-otherwise Gaussian.
+beam profile at the end of a guide or at the sample position.
 
