--- a/trunk/source_maxwell.tex
+++ b/trunk/source_maxwell.tex
@@ -1,27 +1,24 @@
-\section{Source\_Maxwell\_3: A simple continuous source
+\section{Source\_Maxwell\_3: A continuous source
 with a Maxwellian spectrum}
 \label{source-maxwell}
 \index{Sources!Source\_Maxwell\_3}
 
-\component{Source\_Maxwell\_3}{System}{ $h$, $w$, $d_{\rm foc}$, $xw$, $yh$, $\lambda_{\rm low}$, $\lambda_{\rm high}$, $I_1$, $T_1$}{$I_2$, $T_2$, $I_3$, $T_3$}{validated}
+\component{Source\_Maxwell\_3}{System}{ $h$, $w$, $d_{\rm foc}$, $xw$, $yh$, $\lambda_{\rm low}$, $\lambda_{\rm high}$, $I_1$, $T_1$}{$I_2$, $T_2$, $I_3$, $T_3$}{Validated}
 
 This component is a source with a Maxwellian energy/wavelength distribution
 sampled in the range $\lambda_{\rm low}$ to $\lambda_{\rm high}$.
-
 The initial neutron ray position is chosen randomly from within a
 rectangle of area $h \times w$ in the $z=0$ plane.
-
 The initial neutron ray direction is focused within
 a solid angle, defined by a rectangular target of width
 $xw$, height $yh$, parallel to
 the $xy$ plane placed at $(0,0,d_{\rm foc})$.
-
 The energy distribution used is a sum of 1, 2, or 3 Maxwellians with
 temperatures $T_1$ to $T_3$ and integrated intensities $I_1$ to $I_3$.
 
 The initial weight of the created neutron ray, $\pi_1$, is
 calculated in the following way for one single Maxwellian:
-The intensity in a small wavelength interval $\[\lambda, \lambda+d\lambda\]$ is
+The intensity in a small wavelength interval $[\lambda, \lambda+d\lambda]$ is
 $ I_1 M(\lambda,T_1) d\lambda $
 where
 $M(\lambda,T_1) = 2 \alpha^2 \exp(-\alpha/\lambda^2) / \lambda^5 $ 
@@ -45,9 +42,11 @@ To fulfill $I_{\rm tot} = I_{\rm MC}$ we need to have
 \pi_1(\lambda) = \Omega A (\lambda_2-\lambda_1) I_1 M(\lambda,T_1) / N_{\rm MC} .
 \end{equation}
 
-This expression is strictly valid only for $\Omega \ll 1$,
-see also the discussion on focusing in section \ref{s:focus}.
+%This expression is strictly valid only for $\Omega \ll 1$,
+%see also the discussion on focusing in section \ref{s:focus}.
 The expression is easily generalized to a general number of Maxwellians.
-The component Source\_gen (see section \ref{source-gen}) 
+
+The component {\bf Source\_gen} (see section \ref{source-gen}) 
 works on the same principle, but provides more options concerning 
 wavelength/energy range specifications, shape, etc.
+
