--- a/trunk/source_simple.tex
+++ b/trunk/source_simple.tex
@@ -3,7 +3,7 @@ with a flat energy/wavelength spectrum}
 \label{source-simple}
 \index{Sources!Source\_simple}
 
-\component{Source\_simple}{System}{ $r_{\rm s}$, $z_{\rm foc}$, $w$, $h$, $E_0$, $\Delta E$, $\Psi$}{$\lambda_0$, $d\lambda$}{Validated, position is the center of disk}
+\component{Source\_simple}{System}{ $r_{\rm s}$, $z_{\rm foc}$, $w$, $h$, $E_0$, $\Delta E$, $\Psi$}{$\lambda_0$, $d\lambda$}{Validated}
 
 This component is
 a simple source with an energy distribution which is uniform
@@ -18,16 +18,14 @@ This geometry is a fair approximation
 of a cylindrical cold/thermal source with the beam going out along
 the cylinder axis.
 
-The initial neutron ray direction is focused within
-a solid angle, defined by a rectangular target of width
-$w$, height $h$, parallel to
-the $xy$ plane placed at $(0,0,z_{\rm foc})$.
+The initial neutron ray direction is focused onto a rectangular target of width
+$w$, height $h$, parallel to the $xy$ plane placed at $(0,0,z_{\rm foc})$.
 
 The initial weight of the created neutron ray, $p_0$, is set to the
 energy-integrated flux, $\Psi$, times the source area, $\pi r_{\rm s}^2$
 times a solid-angle factor, which is basically the
 solid angle of the focusing rectangle.
-See also the discussion on focusing in section \ref{s:focus}.
+See also the section \ref{s:neutron-flux} on source flux.
 
 This component replaces the obsolete components
 Source\_flux\_lambda, Source\_flat, Source\_flat\_lambda, and Source\_flux.
