--- a/trunk/sources.tex
+++ b/trunk/sources.tex
@@ -6,15 +6,22 @@
 \index{Library!Components!sources}
 
 \MCS\ contains a number of different source components,
-and any simulation will contain exactly one source.
+and any simulation will contain exactly one of these source.
 The main function of a source is to determine a set of initial
 parameters $({\bf r}, {\bf v}, t)$
 for each neutron ray. This is done by Monte Carlo choices from
-suitable distributions. For example, in all present sources the initial position is
+suitable distributions. For example, in all present sources 
+the initial position is
 found from a uniform distribution over the source surface.
+The shape of most sources can be chosen to be either circular or rectangular.
+The initial neutron velocity is selected within an interval
+of either the corresponding energy or the corresponding wavelength.
+Polarization is not relevant for sources,
+and we let the neutron spin ${\bf s}=(0,0,0)$.
+
 For time-of-flight sources, the choice of the emission time, $t$,
 is being made on basis of detailed analytical expressions.
-For other sources, $t$ is set to zero (default). 
+For other sources, $t$ is set to zero.
 In the case one would like to use a steady state source 
 with time-of-flight settings, 
 the emission time of each neutron ray should be determined using 
@@ -32,47 +39,50 @@ as in the example below:
   %}
 \end{verbatim}
 
-Polarization is not relevant for sources,
-and we let the neutron spin ${\bf s}=(0,0,0)$.
-
-The shape of most sources can be chosen to be either circular or rectangular.
-The initial neutron velocity is selected within an interval
-of either the corresponding energy or the corresponding wavelength.
-
+\subsection{Neutron flux}
+\label{s:neutron-flux}
 The flux of the sources deserves special attention. The total neutron
 intensity is defined as the sum of weights of all emitted neutron rays
 during one simulation
 (the unit of total neutron weight is thus neutrons per second).
-The flux is then defined as intensity per area of the source.
-For samples that uses a realistic energy/wavelength distribution,
-the neutron intensity is given as the integrated neutron intensity
-inside the energy/wavelength range. Similarly, as most sources can focus neutrons to an input window (usually the guide entrance), the intensity is scaled to account for the corresponding solid angle.
+The flux, $\psi$, at an instrument is defined as intensity per area perpendicular 
+to the beam direction.
 
-The flux~$\Phi$ is the number of neutrons emitted per second from a
-one~cm$^2$ area on the source surface, with direction within a one
-steradian solid angle, and with wavelength within a one {\AA}ngstr{\o}m
-interval. The total number of neutrons emitted towards a given diaphragm
-in one second is therefore
-$$ N_{\rm total} = \Phi A \Omega \Delta\lambda $$
+The source flux, $\Phi$, is defined in different units:
+the number of neutrons emitted per second from a
+1~cm$^2$ area on the source surface, 
+with direction within a 1~ster.\ solid angle, 
+and with wavelength within a 1 {\AA} interval. 
+The total number of real neutrons emitted towards a given diaphragm
+in one second is therefore (for constant $\Phi$):
+\begin{equation} 
+N_{\rm total} = \Phi A \Omega \Delta\lambda ,
+\end{equation}
 where $A$ is the source area, $\Omega$ is the solid angle of the
 diaphragm as seen from the source surface, and $\Delta\lambda$ is the
 width of the wavelength interval in which neutrons are emitted (assuming
 a uniform wavelength spectrum). If $N_{\rm sim}$ denotes the number of
 neutron histories to simulate, the initial neutron weight $p_0$ must be set to
-$$ p_0 = \frac{N_{\rm total}}{N_{\rm sim}} =
-    \frac{\Phi}{N_{\rm sim}} A \Omega \Delta\lambda $$
-
+\begin{equation}
+p_0 = \frac{N_{\rm total}}{N_{\rm sim}} =
+    \frac{\Phi(\lambda)}{N_{\rm sim}} A \Omega \Delta\lambda ,
+\end{equation}
+where the source flux is now given a $\lambda$-dependence.
 The simulations are performed so that detector intensities
 are independent of the number of neutron histories simulated
 (although more neutron histories will give better statistics).
 
-As a start, we recommand new \MCS\ users to use the Source\_simple component, then use the Source\_Maxwell\_3 or the Source\_gen.
+As a start, we recommand new \MCS\ users to use the 
+{\bf Source\_simple} component.
+Slightly more realistic samples are {\bf Source\_Maxwell\_3} for
+continuous sources or {\bf Moderator} for time-of-flight sources.
 
 Optimizers can dramatically improve the statistics, but may occasionally 
 give wrong results, due to misleaded optimization. 
 You should always check such simulations with (shorter) non-optimized ones.
 
-Other ways to speed-up simulations are to read events from a file. See section \ref{sources-seealso} for possible file formats.
+Other ways to speed-up simulations are to read events from a file. 
+See section \ref{sources-seealso} for details.
 
 \begin{figure}
   \begin{center}
@@ -95,10 +105,13 @@ Other ways to speed-up simulations are to read events from a file. See section \
 \input{source_gen}
 
 \newpage
-\input{Source_adapt}
+\input{moderator}
 
 \newpage
-\input{moderator}
+\input{Source_adapt}
+
+%\newpage
+%\input{Adapt_check}
 
 \newpage
 \input{Source_Optimizer}
@@ -113,7 +126,7 @@ Other ways to speed-up simulations are to read events from a file. See section \
 There are many other source definitions in \MCS .
 
 Detailed pulsed source components are available for new facilities
-in a number of contributed components not described in this manuel:
+in a number of contributed components not described in this manual:
 \begin{itemize}
 \item SNS ({\bf contrib/SNS\_source})
 \item ISIS ({\bf contrib/ISIS\_moderator})
@@ -121,7 +134,7 @@ in a number of contributed components not described in this manuel:
 \end{itemize}
 
 When no analytical model (e.g. a Maxwellian distribution) exits, 
-one may have access to measurement, estimated flux distributions, 
+one may have access to measurements, estimated flux distributions, 
 event files, and - better - to MCNP/Triploli4 neutron event records. 
 The following components are then useful:
 
