--- a/trunk/techniq.tex
+++ b/trunk/techniq.tex
@@ -7,12 +7,12 @@ This chapter explains the simulation strategy and the Monte Carlo
 techniques used in \MCS. We first explain the concept of the neutron
 weight factor, and discuss the statistical errors in dealing with sums
 of neutron weights.  Secondly, we give an expression for how the weight
-factor should transform under a Monte Carlo choice and specialize this
+factor transforms under a Monte Carlo choice and specialize this
 to the concept of focusing components.  Finally, we present a way of
 generating random numbers with arbitrary distributions.
 
 \section{Introduction}
-What makes physicists happy ? Probably collect good quality data, pushing the instruments to their limits, and fit that data to physical models.
+What makes physicists happy? Probably collect good quality data, pushing the instruments to their limits, and fit that data to physical models.
 Among available measurement techniques, neutron scattering provides a large variety of spectrometers to probe structure and dynamics of all kinds of materials.
 
 Unfortunately the neutron flux is often a limitation in the experiments. This then motivates instrument responsibles to improve the flux and the overall efficiency at the spectrometer positions, and even to design new machines. Using both analytical and numerical methods, optimal configurations may be found.
@@ -21,13 +21,41 @@ But achieving a satisfactory experiment on the best neutron spectrometer is not 
 
 \section{Neutron spectrometer simulations}
 
-Neutron scattering instruments are built as a series of neutron optics elements. Each of these elements modifies the beam characteristics (divergence, wavelength spread, spatial and time distributions, ...) in a way which may be modeled through analytical methods, for simplified neutron beam configurations.
-This stands for individual elements such as guides \cite{Leibnitz63,Mildner90}, choppers \cite{Lowde60,Copley03}, Fermi choppers \cite{Fermi47,Peters05}, velocity selectors \cite{Clark66}, monochromators \cite{Freund83,Sears97,Shirane02,Alianelli04}, and detectors \cite{Radeka74,Charpak89,Manzin04}.
-In the case of selected neutron instrument parts, one may use efficiently the so-called acceptance diagram theory \cite{Mildner90,Copley93,Cussen03} within which the neutron beam distributions are considered to be homogeneous or gaussian.
-But the concatenation of a high number of neutron optics, which indeed constitute real instruments, brings additional complexity by introducing strong correlations between neutron beam parameters: divergence and position - which is the basis of the acceptance diagram method - but also wavelength and time. The usual analytical methods (phase-space theory...) then reach their limit of validity in the description of the resulting fine effects.
+Neutron scattering instruments are built as a series of neutron optics elements. 
+Each of these elements modifies the beam characteristics 
+(e.g. divergence, wavelength spread, spatial and time distributions) 
+in a way which may be modeled through analytical methods, 
+for simplified neutron beam configurations.
+This stands for individual elements such as guides \cite{Leibnitz63,Mildner90}, 
+choppers \cite{Lowde60,Copley03}, Fermi choppers \cite{Fermi47,Peters05}, 
+velocity selectors \cite{Clark66}, 
+monochromators \cite{Freund83,Sears97,Shirane02,Alianelli04}, 
+and detectors \cite{Radeka74,Charpak89,Manzin04}.
+In the case of selected neutron instrument parts, one may use efficiently 
+the so-called acceptance diagram theory \cite{Mildner90,Copley93,Cussen03} 
+within which the neutron beam distributions are considered to be homogeneous 
+or gaussian.
+However, the concatenation of a high number of neutron optical elements, 
+which indeed constitute real instruments, brings additional complexity 
+by introducing strong correlations between neutron beam parameters: 
+divergence and position - which is the basis of the acceptance diagram method - 
+but also wavelength and time. 
+The usual analytical methods (phase-space theory...) then reach their limit 
+of validity in the description of the resulting fine effects.
 
-In principle, computing individual neutron event propagation at each instrument part, using analytical and numerical models as cited before, is not such a hard task. The use of probablilities is common to describe microscopic physical processes. Integrating all these events over the propagation path will result in an estimation of measurable quantities characterizing the neutron instrument. Moreover, using variance reduction ({\it e.g.} importance sampling), whenever possible, will both speed-up the computation and achieve a better accuracy. What we just sketched is nothing else than the basis of the Monte-Carlo (MC) method \cite{James80}, applied to neutron ray-tracing instrumentation.
+In principle, computing individual neutron event propagation 
+at each instrument part, using analytical and numerical models, 
+is not such a hard task. 
+The use of probablilities is common to describe microscopic physical processes. 
+Integrating all these events over the propagation path will result 
+in an estimation of measurable quantities characterizing the neutron instrument. 
+Moreover, using variance reduction ({\it e.g.} importance sampling), 
+whenever possible, will both speed-up the computation and achieve 
+a better accuracy. What we just sketched is nothing else than the basis 
+of the Monte-Carlo (MC) method \cite{James80}, 
+applied to neutron ray-tracing instrumentation.
 
+\subsubsection{Monte Carlo ray tracing simulations}
 Mathematically, the Monte-Carlo method is an application of the law of large numbers \cite{James80,Grimmett92}. Let $f(u)$ be a finite continuous integrable function of parameter $u$ for which an integral estimate is desirable. The discrete statistical mean value of $f$ (computed as a series) in the uniformly sampled interval $a < u < b$ converges to the mathematical mean value of $f$ over the same interval.
 
 \begin{equation}
@@ -45,18 +73,17 @@ The neutron ray-tracing Monte-Carlo method has been used widely for e.g. guide s
 \section{The neutron weight, $p$}
 \label{s:probweight}
 A totally realistic semi-classical simulation will require that
-each neutron is at any time either present or not
-(it might be ABSORB'ed or lost in another way).
-In many set-ups, {\em e.g.} triple axis spectrometers, only a
+each neutron is at any time either present or lost.
+In many set-ups, {\em e.g.} triple axis spectrometers, only a very
 small fraction of the initial neutrons will ever be detected, and
 simulations of this kind will therefore waste much time in dealing
-with neutrons that get lost.
+with neutrons that never hit the detector.
 
 An important way of speeding up calculations is to introduce
-a neutron weight for each simulated neutron and to
-adjust this weight according to the path of the neutron.
+a neutron weight for each simulated neutron ray and to
+adjust this weight according to the path of the ray.
 If {\em e.g.}\ the reflectivity of a certain
-optical component is 10\%, and only reflected neutrons are
+optical component is 10\%, and only reflected neutrons ray are
 considered in the simulations, the neutron
 weight will be multiplied by 0.10 when passing this component,
 but every neutron is allowed to reflect in the component.
@@ -65,13 +92,14 @@ would require in average ten incoming neutrons for each reflected one.
 
 Let the initial neutron weight be $p_0$ and let us denote the weight
 multiplication factor in the $j$'th component by $\pi_j$.  The resulting
-weight factor for the neutron after passage of the whole instrument is
+weight factor for the neutron ray after passage of the whole instrument is
 equal to the product of all the contributions
 \begin{equation}
 \label{e:probprod}
 p = p_0 \prod_{j=1}^n \pi_j .
 \end{equation}
-For convenience, the value of $p$ is updated within each component.
+For convenience, the value of $p$ is updated (within each component) 
+during the simulation.
 
 Simulation by weight adjustment is performed
 whenever possible. This includes
@@ -82,6 +110,7 @@ whenever possible. This includes
  which does not take each blade into account).
 \item Reflection from monochromator (and analyser) crystals
  with finite reflectivity and mosaicity.
+\item passage of a continuous beam through a chopper.
 \item Scattering from samples.
 \end{itemize}
 
@@ -89,12 +118,9 @@ whenever possible. This includes
 \label{s:staterror}
 
 In a typical simulation, the result will consist of a
-count of neutrons with different weights.\footnote{The
-sum of these weights is an estimate of
-the mean number of neutrons hitting the monitor
-(or detector) in a ``real'' experiment
-where the number of neutrons emitted from the source
-is the same as the number of simulated neutrons.}
+count of neutrons ray with different weights. The
+sum of these weights is an estimate of the mean number of neutrons 
+hitting the monitor (or detector) per second in a ``real'' experiment.
 One may write the counting result as
 \begin{equation}
 \label{psum}
@@ -107,7 +133,7 @@ mean value of $I$ is unchanged.
 However, $N$ will in general be enhanced,
 and this will improve the statistics of the simulation.
 
-To give some estimate of the statistical error, we proceed as follows:
+To give an estimate of the statistical error, we proceed as follows:
 Let us first for simplicity assume that all the counted neutron weights are
 almost equal, $p_i \approx \overline{p}$,
 and that we observe a large number of neutrons, $N \geq 10$.
@@ -157,7 +183,7 @@ $N=\sum_i p_i^0, I=\sum_i p_i^1$, and $M_2 = \sum_i p_i^2$.
 \section{Weight factor transformations during a Monte Carlo
  choice}
 When a Monte Carlo choice must be performed, {\em e.g.} when the
-initial energy and direction of the neutron is decided at the source,
+initial energy and direction of the neutron ray is decided at the source,
 it is important to adjust the neutron weight so that the combined
 effect of neutron weight change and Monte Carlo probability
 equals the actual physical properties of the component.
@@ -179,17 +205,18 @@ by a factor $\pi_j$ (in this case: $j=1$) so that
 f_{\rm MC}(E,\Ombold,{\bf r}) \pi_j(E,\Ombold,{\bf r})
  = \Pi(E,\Ombold,{\bf r}) .
 \end{equation}
-For the sources present in version \version,
-only the $(\Ombold, {\bf r})$ dependence of the correction factors
-are taken into account.
+%For the sources present in version \version,
+%only the $(\Ombold, {\bf r})$ dependence of the correction factors
+%are taken into account.
 
 The weight factor transformation rule Eq.~(\ref{probrule})
 is of course also valid for other types of Monte Carlo choices,
 although the probability distributions may depend upon
 different parameters. An important example
 is elastic scattering from a powder sample,
-where the Monte-Carlo choices are the scattering position
-and the final neutron direction.
+where the Monte-Carlo choices are the particular powder line to scatter from,
+the scattering position within the sample and the final neutron direction
+within the Debye-Scherrer cone.
 
 It should be noted that the $\pi_j$'s found in the weight factor
 transformation are multiplied by the $\pi_j$'s found by the
@@ -200,8 +227,8 @@ weight given by Eq.~(\ref{e:probprod}).
 \subsection{Focusing components}
 \label{s:focus}
 An important application of weight transformation is focusing.
-Assume that the sample scatters the neutrons in many directions.
-In general, only neutrons flying in some of these directions will
+Assume that the sample scatters the neutron rays in many directions.
+In general, only neutron rays in some of these directions will
 stand any chance of being detected. These directions we call
 the {\em interesting directions}.
 The idea in focusing is to avoid wasting computation time on
@@ -220,10 +247,10 @@ $\pi_j = |\Delta \Ombold| / (4 \pi)$.
 One thus ensures that the mean simulated intensity is unchanged
 during a "correct" focusing, while a too narrow focusing will
 result in a lower (\textit{i.e.} wrong) intensity, since one cuts
-away neutrons that would otherwise have counted.
+away neutrons rays that would otherwise have counted.
 
-One could also think of using adaptive importance sampling, % \cite{importance},
-so that \MCS\ during the simulations will determine
+Another strategy is adaptive importance sampling, % \cite{importance},
+where \MCS\ during the simulations will determine
 the most interesting directions and gradually change
 the focusing according to that. A first implementation of this idea is
 found in the Source\_adapt component.%, described in section~\ref{s:Source_adapt}.
@@ -237,26 +264,26 @@ We thus need to be able to transform between probability distributions,
 and we here give a short explanation on how to do this.
 
 Assume that we pick a random number, $x$, from a distribution $\phi(x)$.
-We are now interested in the shape of the distribution of the
+We are now interested in the shape of the distribution, $\Psi(y)$, of the
 transformed $y=f(x)$, assuming $f(x)$ is monotonous.
 All random numbers lying in the interval $[x; x+dx]$
 are transformed to lie within the interval $[y; y+f'(x)dx]$, so the
-resulting distribution must be $\phi(y) = \phi(x) / f'(x)$.
+resulting distribution must be $\Psi(y) = \phi(x) / f'(x)$.
 
 If the random number generator selects numbers uniformly in the interval
 $[0; 1]$, we have $\phi(x) = 1$, and
 one may evaluate the above expression further
 \begin{equation}
-\phi(y) = \frac{1}{f'(x)} = \frac{d}{dy} f^{-1}(y) .
+\Psi(y) = \frac{1}{f'(x)} = \frac{d}{dy} f^{-1}(y) .
 \end{equation}
 By indefinite integration we reach
 \begin{equation}
 \label{e:randtrans}
-\int \phi(y) dy = f^{-1}(y) = x ,
+\int \Psi(y) dy = f^{-1}(y) = x ,
 \end{equation}
 which is the essential formula for finding the right transformation
 of the initial random numbers.
-Let us illustrate with a few examples of transformations used within the
+Let us illustrate with a few examples of transformations relevant for the
 \MCS\ components.
 
 \paragraph{The circle}
@@ -267,9 +294,16 @@ $\phi(r)=2r/R^2$.
 The polar angle is found simply by multiplying a random number
 with $2\pi$. For the radius, we like to find $r=f(x)$, where again $x$
 is the generated random number. Left side of Eq.~(\ref{e:randtrans}) gives
-$\int \phi(r) dr = \int 2 r/R^2 dr = r^2/R^2$, which should equal $x$.
+$\int \Psi(r) dr = \int 2 r/R^2 dr = r^2/R^2$, which should equal $x$.
 Hence $r = R\sqrt{x}$.
 
+\paragraph{The sphere}
+For finding a random point on the surface of the unit sphere,
+one needs to determine the two angles, $(\theta, \psi)$.
+As for a circle, $\psi$ is chosen from a uniform distribution
+in $[0; 2\pi]$. The probability distribution of $\theta$ should be
+$\phi(\theta)=\sin(\theta)$ (for $\theta \in [0; \pi/2 ]$),
+whence $\theta=\cos^{-1}(x)$.
 
 \paragraph{Exponential decay}
 In a simple time-of-flight source, the neutron flux decays exponentially
@@ -280,12 +314,3 @@ Use of Eq.~(\ref{e:randtrans}) gives
 $x = - \exp(-t/\tau)$, which is a number in the interval $[-1; 0]$.
 If we want to pick a positive random number instead, we will have
 to change sign by $x_1 = -x$ and thus reach $t = - \tau \ln (x_1)$.
-
-
-\paragraph{The sphere}
-For finding a random point on the surface of the unit sphere,
-one needs to determine the two angles, $(\theta, \psi)$.
-As for a circle, $\psi$ is chosen from a uniform distribution
-in $[0; 2\pi]$. The probability distribution of $\theta$ should be
-$\phi(\theta)=\sin(\theta)$ (for $\theta \in [0; \pi/2 ]$),
-whence $\theta=\cos^{-1}(x)$.
