--- a/trunk/tof_monitor.tex
+++ b/trunk/tof_monitor.tex
@@ -7,24 +7,24 @@
 The component {\bf TOF\_monitor} has a rectangular opening
 in the $x-y$ plane, given by the $x$ and $y$ parameters,
 like for {\rm Slit}.
-The neutron is propagated to the plane of the monitor
+The neutron ray is propagated to the plane of the monitor
 by the kernel call PROP\_Z0.
-Any neutron ray that passes within the opening is counted, and
-the total neutron counts are updated:
+A neutron ray if counted if it passes within the rectangular opening 
+given by the $x$ and $y$ limits.
 
 Special about {\bf TOF\_monitor} is that it is sensitive to
 the time, $t$, where the neutron ray is hits the component.
 Like in a real time-of-flight detector, the time dimension is
 binned into small time intervals.
-Hence this monitor updates a one-dimensional array of counts.
+Hence this monitor updates a one-dimensional histogram of counts.
 The $n_{\rm chan}$ time intervals begin at $t_0$ and
-end at $t_1$ (or have each length $dt$ if this parameter is specified).
+end at $t_1$ (alternatively, the interval length is specified by $\Delta t$).
 As usual in time-of-flight analysis, all times are given in units of $\mu$s.
 
 The output parameters from {\bf TOF\_monitor} are the three count numbers,
 $N, I$, and $M_2$ for the total counts in the monitor.
-In addition a file is produced with a list of the same three data divided in
-different TOF bins.
+In addition, a file, \verb+filename+, is produced with a list of 
+the same three data divided in different TOF bins.
 This file can be read and plotted by the {\rm MCplot} tool; see the
 System Manual.
 
