--- a/trunk/virtual_input.tex
+++ b/trunk/virtual_input.tex
@@ -2,7 +2,7 @@
 \label{virtual_input}
 \index{Sources!Virtual source from stored neutron events}
 
-\component{Virtual\_input}{System}{filename}{repeat count, type}{}
+\component{Virtual\_input}{System}{filename}{repeat-count, type}{}
 
 The component {\bf Virtual\_input} resumes a split simulation where the
 first part has been performed by another instrument and the neutron ray
@@ -10,12 +10,19 @@ parameters have been stored by the component {\bf Virtual\_output}.
 
 All neutron ray parameters are read from the input file, which is by default
 of ``text'' type, but can also assume the binary formats
-``float'' or ``double''. The reading of neutron rays continue until the
+``float'' and ``double''. The reading of neutron rays continue until the
 specified number of rays have been simulated or
 till the file has been exhausted. If desirable, the input file
 can be reused a number of times, determined by the optional parameter
-``repeat count''. This is only relevant if you know that further part of the suimulation makes use of MC choices, else you will repeat exactly the same events all the way long. However, care should be taken when dealing with
-absolute intensities, which are automatically corrected only
+``repeat-count''. This is only useful if the present simulation makes use of 
+MC choices, otherwise the same outcome will result for each repetition of the
+simulation.
+
+Care should be taken when dealing with
+absolute intensities, which will be correct only
 when the input file has been exhausted once.
 
-The simulation ends either with the end of the repeated file counts, or with the normal end with $ncount$ \MCS\ simulation events. We recommand to use a very large value, e.g. $ncount=1e10$ when launching simulations.
+The simulation ends with either the end of the repeated file counts, 
+or with the normal end with $ncount$ \MCS\ simulation events. We recommand to 
+control the simulation on ´´repeat-count'' by using
+a very large ncount value, e.g. $ncount=1e10$.
