--- a/trunk/virtual_output.tex
+++ b/trunk/virtual_output.tex
@@ -5,8 +5,8 @@
 \component{Virtual\_output}{System}{filename}{buffer size, type}{}
 
 The component {\bf Virtual\_output} stores the neutron ray parameters
-from a split simulation. It is then possible to let the
-next part of the simulation be performed by another instrument,
+from a split simulation. The idea is to let the
+next part of the simulation be performed by another instrument file,
 which reads the stored neutron ray
 parameters by the component {\bf Virtual\_input}.
 
@@ -15,4 +15,8 @@ of ``text'' type, but can also assume the binary formats
 ``float'' or ``double''. The storing of neutron rays continue until the
 specified number of simulations have been performed.
 
-The buffer size may be used to limit the size of the output file, but intentities may be then wrong. The best is to let the default value to zero,m and save all neutrons. You may control then the size of the file with the general $ncounts$ parameter.
+The buffer size may be used to limit the size of the output file, but 
+absolute intentities are then likely to be wrong. 
+We recommend to use the default value of zero, saving all neutron rays. 
+The size of the file is then controlled indirectly with 
+the general $ncounts$ parameter.
